refactored : language fix

--- a/src/language/locales/hi.json
+++ b/src/language/locales/hi.json
@@ -243,7 +243,100 @@
     "Get Started With Cignix": "Cignix के साथ शुरू करें",
     "We're so glad you're here. Quitting smoking is a journey, and you don’t have to do it alone. Whether you're looking for guidance, helpful tips, or answers to your questions, we’re here to support you every step of the way. Browse the sections below to get the help you need and take your first step toward a healthier, smoke-free life.": "हमें खुशी है कि आप यहाँ हैं। धूम्रपान छोड़ना एक यात्रा है, और आपको इसे अकेले नहीं करना है। चाहे आप मार्गदर्शन, सहायक सुझाव या अपने प्रश्नों के उत्तर खोज रहे हों, हम हर कदम पर आपका समर्थन करने के लिए यहाँ हैं। आवश्यक सहायता प्राप्त करने के लिए नीचे दिए गए अनुभागों को ब्राउज़ करें और एक स्वस्थ, धूम्रपान-मुक्त जीवन की ओर अपना पहला कदम उठाएं।",
     "Welcome to the Cignix Help Center!": "Cignix सहायता केंद्र में आपका स्वागत है!",
-    "Help Center": "सहायता केंद्र"
+    "Help Center": "सहायता केंद्र",
+    "Embark on your journey to quit smoking with Cignix. With our simple resources and dedicated support, you're never alone on this path.": "Cignix के साथ धूम्रपान छोड़ने की अपनी यात्रा शुरू करें। हमारे सरल संसाधनों और समर्पित सहायता के साथ, आप इस रास्ते पर कभी अकेले नहीं होंगे।",
+    "Sign Up": "साइन अप करें",
+    "Head over to the landing page of Cignix and click on the": "Cignix के लैंडिंग पेज पर जाएं और क्लिक करें",
+    "Sign-in": "साइन इन",
+    "tab.": "टैब।",
+    "Then, select the": "फिर चुनें",
+    "on the next screen.": "अगली स्क्रीन पर।",
+    "Now, fill in the required details, including Name, email ID, mobile number, DOB, and gender.": "अब आवश्यक विवरण भरें, जिसमें नाम, ईमेल आईडी, मोबाइल नंबर, जन्म तिथि और लिंग शामिल हैं।",
+    "Enter a secure password for Cignix’s account.": "Cignix खाते के लिए एक सुरक्षित पासवर्ड दर्ज करें।",
+    "Click on the": "क्लिक करें",
+    "Get Started": "शुरू करें",
+    "Now option and you have to take a": "अब विकल्प पर क्लिक करें और आपको देना होगा",
+    "SIM test": "SIM परीक्षण",
+    "Then, you can access the free videos available.": "फिर, आप उपलब्ध निःशुल्क वीडियो देख सकते हैं।",
+    "Note": "ध्यान दें",
+    "In addition, you can also sign up using your Google account.": "इसके अलावा, आप अपने Google खाते का उपयोग करके भी साइन अप कर सकते हैं।",
+    "Log In": "लॉग इन करें",
+    "Using Password": "पासवर्ड का उपयोग करके",
+    "Once registered, click on the": "पंजीकरण के बाद, क्लिक करें",
+    "tab on the landing page.": "लैंडिंग पेज पर टैब।",
+    "Next, enter the registered mobile number or email ID.": "इसके बाद, पंजीकृत मोबाइल नंबर या ईमेल आईडी दर्ज करें।",
+    "Following that, click on the": "इसके बाद, क्लिक करें",
+    "Password": "पासवर्ड",
+    "bar.": "बार।",
+    "Then, input the appropriate password and click on": "फिर, उपयुक्त पासवर्ड दर्ज करें और क्लिक करें",
+    "Continue": "जारी रखें",
+    "Using OTP": "OTP का उपयोग करके",
+    "On the landing page, click on the": "लैंडिंग पेज पर क्लिक करें",
+    "option.": "विकल्प।",
+    "Then, input the registered email ID or mobile number.": "फिर, पंजीकृत ईमेल आईडी या मोबाइल नंबर दर्ज करें।",
+    "Select the OTP bar and you will receive an": "OTP बार चुनें और आपको एक मिलेगा",
+    "via registered email ID or mobile number.": "पंजीकृत ईमेल आईडी या मोबाइल नंबर के माध्यम से।",
+    "Enter the OTP and you can further access the videos available on Cignix.": "OTP दर्ज करें और फिर आप Cignix पर उपलब्ध वीडियो तक पहुंच सकते हैं।",
+    "Alternatively, you can sign in using your Google account or OTP.": "वैकल्पिक रूप से, आप अपने Google खाते या OTP का उपयोग करके साइन इन कर सकते हैं।",
+    "Customize Your Profile": "अपनी प्रोफ़ाइल अनुकूलित करें",
+    "To customize your profile on Cignix, you have to take the SIM test.": "Cignix पर अपनी प्रोफ़ाइल को अनुकूलित करने के लिए, आपको SIM परीक्षण देना होगा।",
+    "Begin the test to assess your smoking habits and readiness to quit. Simply select a number on the scale that best reflects your agreement, likelihood, or preference.": "अपने धूम्रपान की आदतों और छोड़ने की तत्परता का आकलन करने के लिए परीक्षण शुरू करें। बस उस संख्या का चयन करें जो आपके समझौते, संभावना या पसंद को सबसे अच्छा दर्शाती हो।",
+    "Your responses will help us provide tailored support for your quit-smoking journey.": "आपकी प्रतिक्रियाएं हमें आपकी धूम्रपान छोड़ने की यात्रा के लिए अनुकूलित सहायता प्रदान करने में मदद करेंगी।",
+    "Begin Your Program": "अपना कार्यक्रम शुरू करें",
+    "Access your personalized dashboard and start your quit-smoking journey with our expert-guided videos.": "अपना व्यक्तिगत डैशबोर्ड एक्सेस करें और हमारे विशेषज्ञ-निर्देशित वीडियो के साथ अपनी धूम्रपान छोड़ने की यात्रा शुरू करें।",
+    "What is Cignix": "Cignix क्या है",
+    "Cignix provides you with step-by-step guidance through expert videos, personalized dashboards, and tracking tools to support you in quitting smoking. The program is designed to your habits and progress, ensuring a customized experience.": "Cignix आपको धूम्रपान छोड़ने में सहायता के लिए विशेषज्ञ वीडियो, व्यक्तिगत डैशबोर्ड और ट्रैकिंग टूल के माध्यम से चरण-दर-चरण मार्गदर्शन प्रदान करता है। यह कार्यक्रम आपकी आदतों और प्रगति के अनुसार डिज़ाइन किया गया है, जिससे आपको एक अनुकूलित अनुभव प्राप्त होता है।",
+    "Can I use Cignix on my smartphone": "क्या मैं अपने स्मार्टफोन पर Cignix का उपयोग कर सकता हूँ",
+    "Absolutely! Download our app from the App Store or Google Play to access Cignix anytime, anywhere.": "बिल्कुल! कभी भी, कहीं भी Cignix का उपयोग करने के लिए हमारे ऐप को ऐप स्टोर या गूगल प्ले से डाउनलोड करें।",
+    "Do I need to pay to use Cignix": "क्या Cignix का उपयोग करने के लिए मुझे भुगतान करना होगा",
+    "Yes, you need to pay a one-fee of ₹4999 in order to get lifetime access to the videos.": "हाँ, आपको वीडियो के लिए आजीवन एक्सेस प्राप्त करने के लिए ₹4999 का एकमुश्त शुल्क देना होगा।",
+    "Who can use Cignix": "Cignix का उपयोग कौन कर सकता है",
+    "Anyone who wants to quit smoking can use Cignix, regardless of how long or how much they’ve been smoking. Individuals above the age of 18 are eligible to use Cignix.": "कोई भी व्यक्ति जो धूम्रपान छोड़ना चाहता है, वह Cignix का उपयोग कर सकता है, चाहे उसने कितने समय से या कितना धूम्रपान किया हो। 18 वर्ष से अधिक आयु के व्यक्ति Cignix का उपयोग करने के पात्र हैं।",
+    "Can I sync my progress across devices": "क्या मैं अपनी प्रगति को विभिन्न डिवाइसों में सिंक कर सकता हूँ",
+    "Yes, your progress is stored in your account and can be accessed across multiple devices by logging in.": "हाँ, आपकी प्रगति आपके खाते में संग्रहीत होती है और इसे लॉगिन करके कई डिवाइसों में एक्सेस किया जा सकता है।",
+    "Is my personal data safe with Cignix": "क्या मेरा व्यक्तिगत डेटा Cignix के साथ सुरक्षित है",
+    "Absolutely. Cignix values your privacy and ensures that all your data is encrypted and securely stored.": "बिल्कुल। Cignix आपकी गोपनीयता को महत्व देता है और यह सुनिश्चित करता है कि आपका सारा डेटा एन्क्रिप्टेड और सुरक्षित रूप से संग्रहीत हो।",
+    "At Cignix, we aim to provide unmatched value through our comprehensive subscription plan, making it easy for our customers to access premium resources with a simple, hassle-free payment process": "Cignix में, हम अपने व्यापक सब्सक्रिप्शन प्लान के माध्यम से बेजोड़ मूल्य प्रदान करने का लक्ष्य रखते हैं, जिससे हमारे ग्राहकों के लिए सरल और परेशानी मुक्त भुगतान प्रक्रिया के साथ प्रीमियम संसाधनों तक पहुंच आसान हो जाती है।",
+    "Subscription Plan": "सब्सक्रिप्शन प्लान",
+    "Cignix offers a single subscription plan that is priced at ₹4999. Once you have made the payment, you will be allowed to access the resources for a lifetime.This single investment unlocks unlimited access to a wealth of resources personalised to meet your needs.": "Cignix एकल सब्सक्रिप्शन प्लान प्रदान करता है जिसकी कीमत ₹4999 है। भुगतान करने के बाद, आपको जीवनभर के लिए संसाधनों तक पहुंच की अनुमति दी जाएगी। यह एक निवेश आपके लिए असीमित संसाधनों की पहुंच खोलता है, जो आपकी आवश्यकताओं के अनुसार व्यक्तिगत होते हैं।",
+    "Payment Methods": "भुगतान के तरीके",
+    "Cignix provides different types of payment options and they are listed below.": "Cignix विभिन्न प्रकार के भुगतान विकल्प प्रदान करता है और वे नीचे सूचीबद्ध हैं।",
+    "Credit Card (Visa Card/ Master Card)": "क्रेडिट कार्ड (Visa कार्ड / Master कार्ड)",
+    "Make a single payment and enjoy unlimited lifetime access to all resources—no renewals, no extra fees.": "सिर्फ एक बार भुगतान करें और सभी संसाधनों तक जीवनभर असीमित पहुंच का आनंद लें—कोई नवीनीकरण नहीं, कोई अतिरिक्त शुल्क नहीं।",
+    "Gain instant access to all current resources and future updates, keeping you equipped with the latest videos.": "सभी मौजूदा संसाधनों और भविष्य के अपडेट्स तक तुरंत पहुंच प्राप्त करें, ताकि आप नवीनतम वीडियो से लैस रहें।",
+    "Comprehensive Benefits": "व्यापक लाभ",
+    "Simple, One-Time Payment": "सरल, एक बार भुगतान",
+    "We understand that convenience and security are paramount when it comes to managing your payments. At Cignix, we offer a variety of flexible and secure payment options to ensure a seamless experience for our users.": "हम समझते हैं कि आपके भुगतानों को प्रबंधित करते समय सुविधा और सुरक्षा सबसे महत्वपूर्ण होती है। Cignix में, हम अपने उपयोगकर्ताओं के लिए एक सहज अनुभव सुनिश्चित करने हेतु विभिन्न लचीले और सुरक्षित भुगतान विकल्प प्रदान करते हैं।",
+    "Our one-time payment model eliminates recurring fees, offering a cost-effective solution.": "हमारा एक बार भुगतान मॉडल आवर्ती शुल्क को समाप्त करता है, जिससे एक लागत-कुशल समाधान मिलता है।",
+    "Credit and Debit Cards": "क्रेडिट और डेबिट कार्ड",
+    "Pay easily using your preferred credit or debit card. We support": "अपने पसंदीदा क्रेडिट या डेबिट कार्ड का उपयोग करके आसानी से भुगतान करें। हम समर्थन करते हैं",
+    "Enjoy fast payments personalized to suit your preferences, with Razorpay.": "Razorpay के साथ अपनी प्राथमिकताओं के अनुसार वैयक्तिकृत तेज भुगतान का आनंद लें।",
+    "Use your bank's online banking services to pay directly from your account. We support a wide range of banks to ensure compatibility.": "अपने खाते से सीधे भुगतान करने के लिए अपने बैंक की ऑनलाइन बैंकिंग सेवाओं का उपयोग करें। हम संगतता सुनिश्चित करने के लिए कई बैंकों का समर्थन करते हैं।",
+    "Simply use your UPI ID or scan a QR code to complete your transaction instantly. We accept payments from leading UPI providers, such as": "बस अपनी UPI आईडी का उपयोग करें या QR कोड स्कैन करें और तुरंत लेन-देन पूरा करें। हम प्रमुख UPI प्रदाताओं से भुगतान स्वीकार करते हैं, जैसे कि",
+    "Cancellation, Return & Refund Policies": "रद्दीकरण, वापसी और धनवापसी नीतियाँ",
+    "At Cignix, we offer a refund option, but it is available only if you request a cancellation within 7 to 10 business days of your purchase or order. Please ensure that your request falls within this window to be eligible for a refund. For any issues or inquiries regarding returns or cancellations, feel free to contact our support team for assistance.": "Cignix में, हम धनवापसी का विकल्प प्रदान करते हैं, लेकिन यह केवल तभी उपलब्ध होता है जब आप अपनी खरीदारी या ऑर्डर के 7 से 10 व्यावसायिक दिनों के भीतर रद्दीकरण का अनुरोध करते हैं। कृपया सुनिश्चित करें कि आपकी अनुरोध इस समय सीमा के भीतर हो ताकि आप धनवापसी के लिए पात्र हो सकें। वापसी या रद्दीकरण से संबंधित किसी भी समस्या या पूछताछ के लिए, सहायता हेतु हमारी सहायता टीम से संपर्क करें।",
+    "How to Subscribe to Cignix": "Cignix की सदस्यता कैसे लें",
+    "Choose Your Plan": "अपना प्लान चुनें",
+    "Visit the subscription section on our website and select the ₹4,999 Lifetime Plan.": "हमारी वेबसाइट के सब्सक्रिप्शन सेक्शन पर जाएं और ₹4,999 का लाइफटाइम प्लान चुनें।",
+    "Enter Payment Details": "भुगतान विवरण दर्ज करें",
+    "Choose your preferred payment method and fill in the required details": "अपना पसंदीदा भुगतान तरीका चुनें और आवश्यक विवरण भरें।",
+    "Complete the Payment": "भुगतान पूरा करें",
+    "Follow the secure checkout process to finalize your subscription.": "अपनी सदस्यता को अंतिम रूप देने के लिए सुरक्षित चेकआउट प्रक्रिया का पालन करें।",
+    "Enjoy Lifetime Access": "जीवनभर की पहुंच का आनंद लें",
+    "Once the payment is successful, your account will be instantly activated, granting you unlimited access to our videos.": "भुगतान सफल होते ही आपका खाता तुरंत सक्रिय हो जाएगा, जिससे आपको हमारे वीडियो तक असीमित पहुंच मिल जाएगी।",
+    "In order to resolve a complaint regarding the Services or to receive further information regarding the use of the Services, please contact us at": "सेवाओं से संबंधित किसी शिकायत को हल करने या सेवाओं के उपयोग के बारे में अधिक जानकारी प्राप्त करने के लिए, कृपया हमसे संपर्क करें:",
+    "Cignix is dedicated to providing reliable and efficient technical support to ensure you have a smooth and seamless experience with our services. Our expert team is ready to assist you with any challenges you may face, helping you get back on track quickly and efficiently.": "Cignix विश्वसनीय और कुशल तकनीकी सहायता प्रदान करने के लिए समर्पित है ताकि आप हमारे सेवाओं के साथ एक सहज और सरल अनुभव प्राप्त कर सकें। हमारी विशेषज्ञ टीम किसी भी समस्या के समाधान के लिए तैयार है ताकि आप जल्दी और प्रभावी रूप से फिर से कार्य शुरू कर सकें।",
+    "Common issues we solve": "हम जिन सामान्य समस्याओं का समाधान करते हैं",
+    "Login Issues": "लॉगिन समस्याएँ",
+    "Struggling to access your account? Whether it’s a forgotten password, account lockout, or a verification problem, our team is here to guide you through the process and ensure you regain access promptly": "क्या आपको अपने खाते तक पहुँचने में कठिनाई हो रही है? चाहे वह पासवर्ड भूल जाना हो, खाता लॉक हो जाना हो या सत्यापन समस्या हो, हमारी टीम आपको प्रक्रिया में मार्गदर्शन देने और शीघ्र पहुँच सुनिश्चित करने के लिए तैयार है।",
+    "Troubleshooting App Errors": "ऐप त्रुटियों का समाधान",
+    "Syncing Devices": "डिवाइस सिंक करना",
+    "Need help connecting and syncing devices with our platform? We assist with setup, configuration, and troubleshooting to ensure a seamless multi-device experience.": "क्या आपको हमारे प्लेटफॉर्म के साथ डिवाइस कनेक्ट और सिंक करने में सहायता चाहिए? हम सेटअप, कॉन्फ़िगरेशन और समस्या निवारण में सहायता करते हैं ताकि आपको एक सहज मल्टी-डिवाइस अनुभव मिल सके।",
+    "Restoring Lost Progress": "खोई हुई प्रगति पुनः प्राप्त करना",
+    "Lost your progress or data? Don’t worry—our support team helps recover your information, so you can continue from where you left off without losing valuable time or effort.": "क्या आपकी प्रगति या डेटा खो गया है? चिंता न करें—हमारी सहायता टीम आपकी जानकारी पुनः प्राप्त करने में मदद करती है ताकि आप वहीं से जारी रख सकें जहाँ आपने छोड़ा था, वह भी बिना किसी समय या प्रयास की हानि के।",
+    "Sign-up": "साइन-अप",
+    "How does Cignix work": "Cignix कैसे काम करता है",
+    "Encountering errors or glitches while using our app or platform? We provide step-by-step assistance to diagnose and resolve technical issues, ensuring optimal performance.": "क्या हमारे ऐप या प्लेटफ़ॉर्म का उपयोग करते समय आपको त्रुटियाँ या गड़बड़ियाँ आ रही हैं? हम तकनीकी समस्याओं का निदान और समाधान करने के लिए चरण-दर-चरण सहायता प्रदान करते हैं, ताकि सर्वोत्तम प्रदर्शन सुनिश्चित किया जा सके।"
   },
   "ContactUs": {
     "We’re committed to offering the best possible support, ensuring your experience with us is smooth!": "हम सर्वोत्तम संभव समर्थन प्रदान करने के लिए प्रतिबद्ध हैं, यह सुनिश्चित करते हुए कि आपके साथ हमारा अनुभव सुचारू हो!",
