--- a/src/language/locales/ma.json
+++ b/src/language/locales/ma.json
@@ -200,7 +200,100 @@
     "Get Started With Cignix": "Cignix ഉപയോഗിച്ച് ആരംഭിക്കുക",
     "We're so glad you're here. Quitting smoking is a journey, and you don’t have to do it alone. Whether you're looking for guidance, helpful tips, or answers to your questions, we’re here to support you every step of the way. Browse the sections below to get the help you need and take your first step toward a healthier, smoke-free life.": "നിങ്ങൾ ഇവിടെ വന്നതിൽ ഞങ്ങൾ വളരെ സന്തോഷിക്കുന്നു. ധൂമപാനം നിർത്തുന്നത് ഒരു യാത്രയാണ്, നിങ്ങൾക്ക് ഇത് ഒറ്റയ്ക്ക് ചെയ്യേണ്ടതില്ല. നിങ്ങൾക്ക് മാർഗനിർദ്ദേശം, ഉപകാരപ്രദമായ നിർദ്ദേശങ്ങൾ, അല്ലെങ്കിൽ നിങ്ങളുടെ ചോദ്യങ്ങൾക്ക് ഉത്തരങ്ങൾ ആവശ്യമുണ്ടെങ്കിൽ, ഞങ്ങൾ നിങ്ങൾക്ക് ഓരോ പടിയിലും പിന്തുണ നൽകാൻ ഇവിടെ ഉണ്ട്. നിങ്ങൾക്ക് ആവശ്യമുള്ള സഹായം നേടാൻ താഴെക്കാണുന്ന വിഭാഗങ്ങൾ ബ്രൗസ് ചെയ്യുക, ആരോഗ്യകരമായ, ധൂമപാനമില്ലാത്ത ജീവിതത്തിലേക്ക് നിങ്ങളുടെ ആദ്യ പടി എടുക്കുക.",
     "Welcome to the Cignix Help Center!": "Cignix സഹായ കേന്ദ്രത്തിൽ സ്വാഗതം!",
-    "Help Center": "സഹായ കേന്ദ്രം"
+    "Help Center": "സഹായ കേന്ദ്രം",
+    "Embark on your journey to quit smoking with Cignix. With our simple resources and dedicated support, you're never alone on this path.": "സിഗ്നിക്സുമായി നിങ്ങളുടെ പുകവലി ഉപേക്ഷിക്കാനുള്ള യാത്ര ആരംഭിക്കുക. ഞങ്ങളുടെ ലളിതമായ ഉപകരണങ്ങളും സമർപ്പിതമായ പിന്തുണയും കൊണ്ട്, ഈ വഴിയിൽ നിങ്ങൾ ഒരിക്കലും ഒറ്റയ്ക്കാകില്ല.",
+    "Sign Up": "സൈൻ അപ്പ് ചെയ്യുക",
+    "Head over to the landing page of Cignix and click on the": "സിഗ്നിക്സിന്റെ ലാൻഡിംഗ് പേജിലേക്ക് പോകുക, തുടർന്ന് ക്ലിക്ക് ചെയ്യുക",
+    "Sign-in": "സൈൻ-ഇൻ",
+    "tab.": "ടാബ്.",
+    "Then, select the": "പിന്നീട്, തിരഞ്ഞെടുക്കുക",
+    "on the next screen.": "അടുത്ത സ്ക്രീനിൽ.",
+    "Now, fill in the required details, including Name, email ID, mobile number, DOB, and gender.": "ഇപ്പോൾ, പേര്, ഇമെയിൽ ഐഡി, മൊബൈൽ നമ്പർ, ജനനത്തിയതി, ലിംഗഭേദം എന്നിവ ഉൾപ്പെടെ ആവശ്യമായ വിവരങ്ങൾ പൂരിപ്പിക്കുക.",
+    "Enter a secure password for Cignix’s account.": "സിഗ്നിക്സ് അക്കൗണ്ടിനായി ഒരു സുരക്ഷിതമായ പാസ്വേഡ് നൽകുക.",
+    "Click on the": "ക്ലിക്ക് ചെയ്യുക",
+    "Get Started": "തുടങ്ങുക",
+    "Now option and you have to take a": "ഇപ്പോൾ ഓപ്ഷൻ തിരഞ്ഞെടുക്കുക, നിങ്ങൾ ഒരു",
+    "SIM test": "SIM ടെസ്റ്റ്",
+    "Then, you can access the free videos available.": "അതിനുശേഷം, ലഭ്യമായ സൗജന്യ വീഡിയോകൾ നിങ്ങൾക്ക് ആക്സസ് ചെയ്യാം.",
+    "Note": "കുറിപ്പ്",
+    "In addition, you can also sign up using your Google account.": "കൂടാതെ, നിങ്ങൾക്ക് നിങ്ങളുടെ Google അക്കൗണ്ട് ഉപയോഗിച്ചും സൈൻ അപ്പ് ചെയ്യാം.",
+    "Log In": "ലോഗിൻ ചെയ്യുക",
+    "Using Password": "പാസ്വേഡ് ഉപയോഗിച്ച്",
+    "Once registered, click on the": "രജിസ്റ്റർ ചെയ്ത ശേഷം, ക്ലിക്ക് ചെയ്യുക",
+    "tab on the landing page.": "ലാൻഡിംഗ് പേജിലെ ടാബ്.",
+    "Next, enter the registered mobile number or email ID.": "അടുത്തതായി, രജിസ്റ്റർ ചെയ്ത മൊബൈൽ നമ്പർ അല്ലെങ്കിൽ ഇമെയിൽ ഐഡി നൽകുക.",
+    "Following that, click on the": "അതിനുശേഷം, ക്ലിക്ക് ചെയ്യുക",
+    "Password": "പാസ്വേഡ്",
+    "bar.": "ബാർ.",
+    "Then, input the appropriate password and click on": "അപ്പോൾ, അനുയോജ്യമായ പാസ്വേഡ് നൽകുക, തുടർന്ന് ക്ലിക്ക് ചെയ്യുക",
+    "Continue": "തുടരുക",
+    "Using OTP": "OTP ഉപയോഗിച്ച്",
+    "On the landing page, click on the": "ലാൻഡിംഗ് പേജിൽ ക്ലിക്ക് ചെയ്യുക",
+    "option.": "ഓപ്ഷൻ.",
+    "Then, input the registered email ID or mobile number.": "പിന്നീട്, രജിസ്റ്റർ ചെയ്ത ഇമെയിൽ ഐഡി അല്ലെങ്കിൽ മൊബൈൽ നമ്പർ നൽകുക.",
+    "Select the OTP bar and you will receive an": "OTP ബാർ തിരഞ്ഞെടുക്കുക, പിന്നെ നിങ്ങൾക്ക് OTP ലഭിക്കും",
+    "via registered email ID or mobile number.": "രജിസ്റ്റർ ചെയ്ത ഇമെയിൽ ഐഡി അല്ലെങ്കിൽ മൊബൈൽ നമ്പർ വഴി.",
+    "Enter the OTP and you can further access the videos available on Cignix.": "OTP നൽകുക, തുടർന്ന് നിങ്ങൾക്ക് സിഗ്നിക്സിൽ ലഭ്യമായ വീഡിയോകൾ ആക്സസ് ചെയ്യാം.",
+    "Alternatively, you can sign in using your Google account or OTP.": "മറ്റുവഴി, നിങ്ങൾക്ക് Google അക്കൗണ്ട് അല്ലെങ്കിൽ OTP ഉപയോഗിച്ച് സൈൻ ഇൻ ചെയ്യാം.",
+    "Customize Your Profile": "നിങ്ങളുടെ പ്രൊഫൈൽ ഇഷ്ടാനുസൃതമാക്കുക",
+    "To customize your profile on Cignix, you have to take the SIM test.": "സിഗ്നിക്സിൽ നിങ്ങളുടെ പ്രൊഫൈൽ ഇഷ്ടാനുസൃതമാക്കുന്നതിന്, നിങ്ങൾ SIM ടെസ്റ്റ് എടുത്തിരിക്കണം.",
+    "Begin the test to assess your smoking habits and readiness to quit. Simply select a number on the scale that best reflects your agreement, likelihood, or preference.": "നിങ്ങളുടെ പുകവലി ശീലങ്ങളും ഉപേക്ഷിക്കാനുള്ള തയ്യാറെടുപ്പും വിലയിരുത്തുന്നതിന് ടെസ്റ്റ് ആരംഭിക്കുക. നിങ്ങൾക്കിഷ്ടമുള്ള, സാധ്യതയുള്ള അല്ലെങ്കിൽ അനുയോജ്യമായ നമ്പർ സ്കേലിൽ തിരഞ്ഞെടുക്കുക.",
+    "Your responses will help us provide tailored support for your quit-smoking journey.": "നിങ്ങളുടെ പ്രതികരണങ്ങൾ ഞങ്ങൾക്ക് നിങ്ങളുടെ പുകവലി ഉപേക്ഷിക്കാനുള്ള യാത്രയ്ക്ക് അനുയോജ്യമായ പിന്തുണ നൽകാൻ സഹായിക്കും.",
+    "Begin Your Program": "നിങ്ങളുടെ പ്രോഗ്രാം ആരംഭിക്കുക",
+    "Access your personalized dashboard and start your quit-smoking journey with our expert-guided videos.": "നിങ്ങളുടെ വ്യക്തിഗത ഡാഷ്ബോർഡ് ആക്സസ് ചെയ്ത് ഞങ്ങളുടെ വിദഗ്ദ്ധർ നിർദേശിച്ച വീഡിയോകൾ ഉപയോഗിച്ച് നിങ്ങളുടെ പുകവലി ഉപേക്ഷിക്കാനുള്ള യാത്ര ആരംഭിക്കുക.",
+    "What is Cignix": "Cignix എന്താണ്",
+    "Cignix provides you with step-by-step guidance through expert videos, personalized dashboards, and tracking tools to support you in quitting smoking. The program is designed to your habits and progress, ensuring a customized experience.": "Cignix നിങ്ങളുടെ പുകവലി ഉപേക്ഷിക്കാനുള്ള പിന്തുണ നൽകുന്നതിനായി വിദഗ്ദ്ധ വീഡിയോകൾ, വ്യക്തിഗത ഡാഷ്ബോർഡുകൾ, ട്രാക്കിംഗ് ഉപകരണങ്ങൾ എന്നിവ വഴി ഒരു ഘട്ടംഘട്ടമായ മാർഗ്ഗനിർദ്ദേശം നൽകുന്നു. ഈ പ്രോഗ്രാം നിങ്ങളുടെ ശീലങ്ങളും പുരോഗതിയും അനുസരിച്ച് രൂപകൽപ്പന ചെയ്തിരിക്കുന്നു.",
+    "Can I use Cignix on my smartphone": "ഞാൻ എന്റെ സ്മാർട്ട്ഫോണിൽ Cignix ഉപയോഗിക്കാമോ?",
+    "Absolutely! Download our app from the App Store or Google Play to access Cignix anytime, anywhere.": "ഉറപ്പായും! നിങ്ങൾക്ക് ഏതുനേരവും, എവിടെയും Cignix ആക്സസ് ചെയ്യാൻ, ഞങ്ങളുടെ ആപ്പ് App Store അല്ലെങ്കിൽ Google Playയിൽ നിന്ന് ഡൗൺലോഡ് ചെയ്യുക.",
+    "Do I need to pay to use Cignix": "Cignix ഉപയോഗിക്കാൻ ഞാൻ പണമടക്കേണ്ടതുണ്ടോ?",
+    "Yes, you need to pay a one-fee of ₹4999 in order to get lifetime access to the videos.": "അതെ, നിങ്ങൾക്ക് വീഡിയോകൾക്ക് ജീവിതകാലത്തേക്ക് ആക്സസ് നേടാൻ ₹4999 മാത്രം പണമടയ്ക്കേണ്ടതുണ്ടു.",
+    "Who can use Cignix": "Cignix ആരെങ്കിലും ഉപയോഗിക്കാമോ?",
+    "Anyone who wants to quit smoking can use Cignix, regardless of how long or how much they’ve been smoking. Individuals above the age of 18 are eligible to use Cignix.": "പുകവലി ഉപേക്ഷിക്കാൻ ആഗ്രഹിക്കുന്ന ആരായാലും, അവർ എത്രകാലം പുകവലിച്ചതായാലും Cignix ഉപയോഗിക്കാം. 18 വയസ്സിന് മുകളിലുള്ളവർ Cignix ഉപയോഗിക്കാൻ അർഹരാണ്.",
+    "Can I sync my progress across devices": "ഞാൻ എന്റെ പുരോഗതി വിവിധ ഉപകരണങ്ങളിലേക്ക് സമന്വയിപ്പിക്കാമോ?",
+    "Yes, your progress is stored in your account and can be accessed across multiple devices by logging in.": "അതെ, നിങ്ങളുടെ പുരോഗതി നിങ്ങളുടെ അക്കൗണ്ടിൽ സംഭരിക്കപ്പെടുകയും, ലോഗിൻ ചെയ്യുന്നതിലൂടെ നിരവധി ഉപകരണങ്ങളിൽ ആക്സസ് ചെയ്യാനും കഴിയും.",
+    "Is my personal data safe with Cignix": "Cignix ൽ എന്റെ വ്യക്തിഗത ഡാറ്റ സുരക്ഷിതമാണോ?",
+    "Absolutely. Cignix values your privacy and ensures that all your data is encrypted and securely stored.": "ഉറപ്പായും. Cignix നിങ്ങളുടെ സ്വകാര്യതക്ക് പ്രാധാന്യം നൽകുകയും നിങ്ങളുടെ എല്ലാ ഡാറ്റയും എൻക്രിപ്റ്റ് ചെയ്ത് സുരക്ഷിതമായി സംഭരിക്കുകയും ചെയ്യുന്നു.",
+    "At Cignix, we aim to provide unmatched value through our comprehensive subscription plan, making it easy for our customers to access premium resources with a simple, hassle-free payment process": "Cignix-ൽ, ഞങ്ങളുടെ സമഗ്രമായ സബ്സ്ക്രിപ്ഷൻ പദ്ധതിയിലൂടെ ഉപഭോക്താക്കൾക്ക് പ്രിമിയം റിസോഴ്സുകൾ എളുപ്പത്തിൽ, അല്പം ബുദ്ധിമുട്ടുമില്ലാത്ത പേയ്മെന്റ് പ്രോസസിലൂടെ ലഭ്യമാക്കിയാണ് ഞങ്ങൾ തികച്ചും അപൂര്വമായ മൂല്യം നൽകാൻ ലക്ഷ്യമിടുന്നത്.",
+    "Subscription Plan": "സബ്സ്ക്രിപ്ഷൻ പദ്ധതി",
+    "Cignix offers a single subscription plan that is priced at ₹4999. Once you have made the payment, you will be allowed to access the resources for a lifetime.This single investment unlocks unlimited access to a wealth of resources personalised to meet your needs.": "Cignix ₹4999 വിലയുള്ള ഒരു സിംഗിൾ സബ്സ്ക്രിപ്ഷൻ പദ്ധതി നൽകുന്നു. നിങ്ങൾ പേയ്മെന്റ് നടത്തിയാൽ, ആ ജീവിതകാലം മുഴുവൻ റിസോഴ്സുകളിലേക്ക് ആക്സസ് അനുവദിക്കപ്പെടും. ഈ ഒരു നിക്ഷേപം നിങ്ങളുടെ ആവശ്യങ്ങൾക്കനുസൃതമായി ഇന്പ്രൂവ് ചെയ്‌ത അനന്തമായ റിസോഴ്സ് ആക്‌സസ് തുറക്കും.",
+    "Payment Methods": "പേയ്മെന്റ് വിധങ്ങൾ",
+    "Cignix provides different types of payment options and they are listed below.": "Cignix വിവിധ തരത്തിലുള്ള പേയ്മെന്റ് ഓപ്ഷനുകൾ നൽകുന്നു, അവ ചുവടെ ലിസ്റ്റ് ചെയ്തിരിക്കുന്നു.",
+    "Credit Card (Visa Card/ Master Card)": "ക്രെഡിറ്റ് കാർഡ് (Visa കാർഡ് / Master കാർഡ്)",
+    "Make a single payment and enjoy unlimited lifetime access to all resources—no renewals, no extra fees.": "ഒരു പേയ്മെന്റ് മാത്രം ചെയ്ത് എല്ലാ റിസോഴ്സുകളിലേക്കും അനന്തമായ ജീവിതകാല ആക്സസ് ആസ്വദിക്കൂ — പുതുക്കലോ അധിക ഫീസോ ഇല്ല.",
+    "Gain instant access to all current resources and future updates, keeping you equipped with the latest videos.": "നിലവിലുള്ള എല്ലാ റിസോഴ്സുകളും ഭാവിയിലെ അപ്‌ഡേറ്റുകളും ഉടൻ ആക്സസ് ചെയ്യൂ, നിങ്ങൾക്ക് ഏറ്റവും പുതിയ വീഡിയോകളോടെ സജ്ജമാകാൻ സഹായിക്കും.",
+    "Comprehensive Benefits": "സമഗ്രമായ നന്മകൾ",
+    "Simple, One-Time Payment": "സാദ്ധ്യതയുള്ള ഒറ്റപേയ്‌മെന്റ്",
+    "We understand that convenience and security are paramount when it comes to managing your payments. At Cignix, we offer a variety of flexible and secure payment options to ensure a seamless experience for our users.": "നിങ്ങളുടെ പേയ്മെന്റ് മാനേജ്മെന്റിൽ സൗകര്യവും സുരക്ഷയും ഏറ്റവും പ്രധാനമാണെന്ന് ഞങ്ങൾ മനസിലാക്കുന്നു. അതിനാൽ, Cignix-ൽ, ഞങ്ങൾ ഉപയോക്താക്കൾക്ക് അനായാസമായ അനുഭവം ഉറപ്പാക്കാൻ വിവിധ സുഖപ്രദവും സുരക്ഷിതവുമായ പേയ്മെന്റ് ഓപ്ഷനുകൾ നൽകുന്നു.",
+    "Our one-time payment model eliminates recurring fees, offering a cost-effective solution.": "ഞങ്ങളുടെ ഒറ്റപേയ്‌മെന്റ് മോഡൽ ആവർത്തിച്ചുണ്ടാകുന്ന ഫീസുകൾ ഒഴിവാക്കി ചെലവുകുറഞ്ഞ പരിഹാരം നൽകുന്നു.",
+    "Credit and Debit Cards": "ക്രെഡിറ്റ്, ഡെബിറ്റ് കാർഡുകൾ",
+    "Pay easily using your preferred credit or debit card. We support": "നിങ്ങളുടെ ഇഷ്ടപ്രകാരം ക്രെഡിറ്റ് അല്ലെങ്കിൽ ഡെബിറ്റ് കാർഡ് ഉപയോഗിച്ച് എളുപ്പത്തിൽ പണമടയ്ക്കുക. ഞങ്ങൾ പിന്തുണയ്ക്കുന്നു.",
+    "Enjoy fast payments personalized to suit your preferences, with Razorpay.": "നിങ്ങളുടെ ആവശ്യാനുസൃതമായി വ്യക്തിഗതമാക്കിയ അതിവേഗ പേയ്മെന്റുകൾ Razorpay മുഖേന ആസ്വദിക്കൂ.",
+    "Use your bank's online banking services to pay directly from your account. We support a wide range of banks to ensure compatibility.": "നിങ്ങളുടെ ബാങ്കിന്റെ ഓൺലൈൻ ബാങ്കിംഗ് സേവനങ്ങൾ ഉപയോഗിച്ച് നിങ്ങളുടെ അക്കൗണ്ടിൽ നിന്ന് നേരിട്ട് പണമടയ്ക്കുക. അനുയോജ്യത ഉറപ്പാക്കാൻ ഞങ്ങൾ നിരവധി ബാങ്കുകൾ പിന്തുണയ്ക്കുന്നു.",
+    "Simply use your UPI ID or scan a QR code to complete your transaction instantly. We accept payments from leading UPI providers, such as": "നിങ്ങളുടെ UPI ഐഡി ഉപയോഗിക്കുക അല്ലെങ്കിൽ QR കോഡ് സ്കാൻ ചെയ്ത് നിങ്ങളുടെ ഇടപാട് ഉടൻ പൂർത്തിയാക്കുക. ഞങ്ങൾ താഴെ പറയുന്ന പ്രധാന UPI പ്രൊവൈഡർമാരിൽ നിന്ന് പേയ്മെന്റ് സ്വീകരിക്കുന്നു.",
+    "Cancellation, Return & Refund Policies": "റദ്ദാക്കൽ, റിട്ടേൺ, റീഫണ്ട് നയങ്ങൾ",
+    "At Cignix, we offer a refund option, but it is available only if you request a cancellation within 7 to 10 business days of your purchase or order. Please ensure that your request falls within this window to be eligible for a refund. For any issues or inquiries regarding returns or cancellations, feel free to contact our support team for assistance.": "Cignix-ൽ ഞങ്ങൾ റീഫണ്ട് ഓപ്ഷൻ നൽകുന്നു, എന്നാൽ ഇത് നിങ്ങളുടെ വാങ്ങലിന് ശേഷം 7 മുതൽ 10 വ്യാവസായിക ദിവസങ്ങൾക്കുള്ളിൽ റദ്ദാക്കൽ ആവശ്യപ്പെടുന്നെങ്കിൽ മാത്രമേ ലഭ്യമാകൂ. റീഫണ്ടിന് അർഹത നേടുന്നതിന് നിങ്ങളുടെ അഭ്യർത്ഥന ഈ കാലയളവിനുള്ളിലാണെന്ന് ഉറപ്പാക്കുക. റിട്ടേണുകളും റദ്ദാക്കലുകളും സംബന്ധിച്ച പ്രശ്നങ്ങൾക്ക് സഹായത്തിനായി ഞങ്ങളുടെ സപ്പോർട്ട് ടീം ബന്ധപ്പെടുക.",
+    "How to Subscribe to Cignix": "Cignix-ൽ എങ്ങനെ സബ്സ്ക്രൈബ് ചെയ്യാം",
+    "Choose Your Plan": "നിങ്ങളുടെ പ്ലാൻ തിരഞ്ഞെടുക്കുക",
+    "Visit the subscription section on our website and select the ₹4,999 Lifetime Plan.": "ഞങ്ങളുടെ വെബ്സൈറ്റിലെ സബ്സ്ക്രിപ്ഷൻ സെക്ഷനിലേക്ക് പോയി ₹4,999 ലൈഫ്‌ടൈം പ്ലാൻ തിരഞ്ഞെടുക്കുക.",
+    "Enter Payment Details": "പേയ്മെന്റ് വിവരങ്ങൾ നൽകുക",
+    "Choose your preferred payment method and fill in the required details": "നിങ്ങളുടെ ഇഷ്ടപ്പെട്ട പേയ്മെന്റ് ഓപ്ഷൻ തിരഞ്ഞെടുക്കുക, ആവശ്യമായ വിവരങ്ങൾ പൂരിപ്പിക്കുക",
+    "Complete the Payment": "പേയ്‌മെന്റ് പൂർത്തിയാക്കുക",
+    "Follow the secure checkout process to finalize your subscription.": "നിങ്ങളുടെ സബ്സ്ക്രിപ്ഷൻ അവസാനിപ്പിക്കാൻ സുരക്ഷിതമായ ചെക്ക്ഔട്ട് പ്രോസസ്സ് പിന്തുടരുക.",
+    "Enjoy Lifetime Access": "ജീവിതകാല ആക്‌സസ് ആസ്വദിക്കൂ",
+    "Once the payment is successful, your account will be instantly activated, granting you unlimited access to our videos.": "പേയ്‌മെന്റ് വിജയകരമാകുമ്പോൾ, നിങ്ങളുടെ അക്കൗണ്ട് ഉടൻ സജീവമാക്കും, ഞങ്ങളുടെ വീഡിയോകളിലേക്ക് നിങ്ങൾക്ക് അമിതാവകാശം നൽകുന്നു.",
+    "In order to resolve a complaint regarding the Services or to receive further information regarding the use of the Services, please contact us at": "സേവനങ്ങൾ സംബന്ധിച്ചുള്ള പരാതികൾ പരിഹരിക്കാൻ അല്ലെങ്കിൽ സേവനങ്ങളുടെ ഉപയോഗം സംബന്ധിച്ച കൂടുതൽ വിവരങ്ങൾ ലഭിക്കാൻ, ഞങ്ങളുമായി ബന്ധപ്പെടുക",
+    "Cignix is dedicated to providing reliable and efficient technical support to ensure you have a smooth and seamless experience with our services. Our expert team is ready to assist you with any challenges you may face, helping you get back on track quickly and efficiently.": "Cignix നിങ്ങളുടെ സേവനങ്ങൾ ഉപയോഗിക്കുമ്പോൾ σαςൌഖ്യവും തടസ്സമില്ലാത്ത അനുഭവവും ഉറപ്പാക്കുന്നതിനായി വിശ്വസനീയവും കാര്യക്ഷമവും ആയ സാങ്കേതിക പിന്തുണ നൽകുന്നതിൽ സമർപ്പിതമാണ്. നിങ്ങൾ നേരിടുന്ന പ്രശ്നങ്ങൾക്കൊക്കെ പരിഹാരമുണ്ടാക്കാൻ ഞങ്ങളുടെ വിദഗ്ധ ടീം തയ്യാറാണ്, നിങ്ങൾക്ക് വേഗത്തിൽ പിന്നെ തുടരാൻ സഹായിക്കും.",
+    "Common issues we solve": "നാം പരിഹരിക്കുന്ന സാധാരണ പ്രശ്നങ്ങൾ",
+    "Login Issues": "ലോഗിൻ പ്രശ്നങ്ങൾ",
+    "Struggling to access your account? Whether it’s a forgotten password, account lockout, or a verification problem, our team is here to guide you through the process and ensure you regain access promptly": "നിങ്ങളുടെ അക്കൗണ്ടിലേക്ക് പ്രവേശിക്കാൻ ബുദ്ധിമുട്ടുണ്ടോ? പാസ്വേഡുകൾ മറന്നതായിരിക്കാം, അക്കൗണ്ട് ലോക്കായിരിക്കാം, അല്ലെങ്കിൽ സ്ഥിരീകരണ പ്രശ്നങ്ങളായിരിക്കാം, നിങ്ങളുടെ പ്രവേശനം പുനഃസ്ഥാപിക്കാൻ ഞങ്ങളുടെ ടീം നിങ്ങളെ സഹായിക്കും.",
+    "Troubleshooting App Errors": "ആപ്പ് പിശകുകളുടെ പരിഹാരം",
+    "Syncing Devices": "ഡിവൈസുകൾ സിങ്ക് ചെയ്യുന്നു",
+    "Need help connecting and syncing devices with our platform? We assist with setup, configuration, and troubleshooting to ensure a seamless multi-device experience.": "നിങ്ങളുടെ ഉപകരണങ്ങൾ പ്ലാറ്റ്ഫോമിനോടൊപ്പം കണക്ട് ചെയ്ത് സിങ്ക് ചെയ്യാൻ സഹായം വേണോ? നിരന്തരമായ ഡിവൈസ് അനുഭവം നൽകാൻ ഞങ്ങൾ സജ്ജീകരണവും കോൺഫിഗറേഷനും പ്രശ്നപരിഹാരവും നൽകുന്നു.",
+    "Restoring Lost Progress": "നഷ്ടമായ പുരോഗതി പുനഃസ്ഥാപിക്കുന്നു",
+    "Lost your progress or data? Don’t worry—our support team helps recover your information, so you can continue from where you left off without losing valuable time or effort.": "നിങ്ങളുടെ പുരോഗതിയോ ഡാറ്റയോ നഷ്ടമായി? വിഷമിക്കേണ്ട, നിങ്ങളുടെ വിവരങ്ങൾ തിരിച്ചുപിടിക്കാൻ ഞങ്ങളുടെ പിന്തുണ ടീം സഹായിക്കും. നിങ്ങൾ അവസാനിച്ചിടത്തുനിന്ന് തുടരണം, നിങ്ങൾക്ക് വിലപ്പെട്ട സമയവും പരിശ്രമവും നഷ്ടപ്പെടാതെ.",
+    "Sign-up": "സൈൻ അപ്പ്",
+    "How does Cignix work": "Cignix എങ്ങനെ പ്രവർത്തിക്കുന്നു",
+    "Encountering errors or glitches while using our app or platform? We provide step-by-step assistance to diagnose and resolve technical issues, ensuring optimal performance.": "ഞങ്ങളുടെ ആപ്പ് അല്ലെങ്കിൽ പ്ലാറ്റ്‌ഫോം ഉപയോഗിക്കുമ്പോൾ പിശകുകൾക്കോ തടസ്സങ്ങൾക്കോ ഇരയാകുന്നുണ്ടോ? സാങ്കേതിക പ്രശ്നങ്ങൾ കണ്ടെത്തുകയും പരിഹരിക്കുകയും ചെയ്യുന്നതിന് ഞങ്ങൾ ഘട്ടംഘട്ടമായ സഹായം നൽകുന്നു, അതിന്റെ ഫലമായി മികച്ച പ്രകടനം ഉറപ്പാക്കുന്നു."
   },
   "ContactUs": {
     "We’re committed to offering the best possible support, ensuring your experience with us is smooth!": "നിങ്ങളുടെ അനുഭവം സുഖകരമായിരിക്കുമെന്ന് ഉറപ്പാക്കാൻ, മികച്ച പിന്തുണ നൽകാൻ ഞങ്ങൾ പ്രതിജ്ഞാബദ്ധരാണ്!",
