--- a/src/language/locales/mr.json
+++ b/src/language/locales/mr.json
@@ -225,7 +225,100 @@
     "Get Started With Cignix": "Cignix सह प्रारंभ करा",
     "We're so glad you're here. Quitting smoking is a journey, and you don’t have to do it alone. Whether you're looking for guidance, helpful tips, or answers to your questions, we’re here to support you every step of the way. Browse the sections below to get the help you need and take your first step toward a healthier, smoke-free life.": "आम्हाला आनंद आहे की तुम्ही इथे आहात. धूम्रपान सोडणे एक प्रवास आहे, आणि तुम्हाला हे एकटे करावे लागणार नाही. तुम्हाला मार्गदर्शन, उपयुक्त टिप्स किंवा तुमच्या प्रश्नांची उत्तरे हवी असली तरी, आम्ही तुम्हाला प्रत्येक पायरीवर समर्थन देण्यासाठी येथे आहोत. तुम्हाला आवश्यक असलेली मदत मिळवण्यासाठी खालील विभागांना ब्राउझ करा आणि एक आरोग्यदायी, धूम्रपानमुक्त जीवनाकडे तुमचा पहिला पाऊल उचला.",
     "Welcome to the Cignix Help Center!": "Cignix मदत केंद्रात आपले स्वागत आहे!",
-    "Help Center": "मदत केंद्र"
+    "Help Center": "मदत केंद्र",
+    "Embark on your journey to quit smoking with Cignix. With our simple resources and dedicated support, you're never alone on this path.": "Cignix सोबत धूम्रपान सोडण्याच्या तुमच्या प्रवासाची सुरुवात करा. आमच्या साध्या साधनांमुळे आणि समर्पित समर्थनामुळे, या प्रवासात तुम्ही कधीही एकटे नसाल.",
+    "Sign Up": "नोंदणी करा",
+    "Head over to the landing page of Cignix and click on the": "Cignix च्या लँडिंग पेजवर जा आणि क्लिक करा",
+    "Sign-in": "साइन-इन",
+    "tab.": "टॅब.",
+    "Then, select the": "मग, निवडा",
+    "on the next screen.": "पुढील स्क्रीनवर.",
+    "Now, fill in the required details, including Name, email ID, mobile number, DOB, and gender.": "आता, नाव, ईमेल आयडी, मोबाइल क्रमांक, जन्मतारीख आणि लिंग यासह आवश्यक माहिती भरा.",
+    "Enter a secure password for Cignix’s account.": "Cignix खात्यासाठी सुरक्षित पासवर्ड टाका.",
+    "Click on the": "यावर क्लिक करा",
+    "Get Started": "प्रारंभ करा",
+    "Now option and you have to take a": "आता पर्यायावर क्लिक करा आणि तुम्हाला एक",
+    "SIM test": "SIM चाचणी",
+    "Then, you can access the free videos available.": "मग तुम्ही उपलब्ध असलेली मोफत व्हिडिओ पाहू शकता.",
+    "Note": "नोंद",
+    "In addition, you can also sign up using your Google account.": "तसेच, तुम्ही तुमच्या Google खात्याचा वापर करूनही नोंदणी करू शकता.",
+    "Log In": "लॉग इन करा",
+    "Using Password": "पासवर्ड वापरून",
+    "Once registered, click on the": "नोंदणी झाल्यानंतर, यावर क्लिक करा",
+    "tab on the landing page.": "लँडिंग पेजवरील टॅबवर.",
+    "Next, enter the registered mobile number or email ID.": "यानंतर, नोंदणीकृत मोबाइल क्रमांक किंवा ईमेल आयडी टाका.",
+    "Following that, click on the": "यानंतर, यावर क्लिक करा",
+    "Password": "पासवर्ड",
+    "bar.": "बार.",
+    "Then, input the appropriate password and click on": "मग योग्य पासवर्ड टाका आणि क्लिक करा",
+    "Continue": "पुढे जा",
+    "Using OTP": "OTP वापरून",
+    "On the landing page, click on the": "लँडिंग पेजवर यावर क्लिक करा",
+    "option.": "पर्याय.",
+    "Then, input the registered email ID or mobile number.": "मग नोंदणीकृत ईमेल आयडी किंवा मोबाइल क्रमांक टाका.",
+    "Select the OTP bar and you will receive an": "OTP बार निवडा आणि तुम्हाला एक OTP मिळेल",
+    "via registered email ID or mobile number.": "नोंदणीकृत ईमेल आयडी किंवा मोबाइल नंबरवर.",
+    "Enter the OTP and you can further access the videos available on Cignix.": "OTP टाका आणि मग तुम्ही Cignix वरील उपलब्ध व्हिडिओ पाहू शकता.",
+    "Alternatively, you can sign in using your Google account or OTP.": "पर्यायी म्हणून, तुम्ही Google खाते किंवा OTP वापरून साइन इन करू शकता.",
+    "Customize Your Profile": "तुमची प्रोफाइल सानुकूलित करा",
+    "To customize your profile on Cignix, you have to take the SIM test.": "Cignix वर तुमचे प्रोफाइल सानुकूलित करण्यासाठी, तुम्हाला SIM चाचणी द्यावी लागेल.",
+    "Begin the test to assess your smoking habits and readiness to quit. Simply select a number on the scale that best reflects your agreement, likelihood, or preference.": "तुमच्या धूम्रपानाच्या सवयी आणि सोडण्याच्या तयारीचे मूल्यांकन करण्यासाठी चाचणी सुरू करा. तुमच्या मताचे किंवा पसंतीचे प्रतिबिंब करणारा क्रमांक निवडा.",
+    "Your responses will help us provide tailored support for your quit-smoking journey.": "तुमच्या उत्तरांमुळे आम्हाला तुमच्या धूम्रपान सोडण्याच्या प्रवासासाठी योग्य मदत देणे शक्य होईल.",
+    "Begin Your Program": "तुमचा प्रोग्राम सुरू करा",
+    "Access your personalized dashboard and start your quit-smoking journey with our expert-guided videos.": "तुमचा वैयक्तिक डॅशबोर्ड वापरून आमच्या तज्ञांनी मार्गदर्शित केलेले व्हिडिओ पाहून तुमचा धूम्रपान सोडण्याचा प्रवास सुरू करा.",
+    "What is Cignix": "Cignix म्हणजे काय",
+    "Cignix provides you with step-by-step guidance through expert videos, personalized dashboards, and tracking tools to support you in quitting smoking. The program is designed to your habits and progress, ensuring a customized experience.": "Cignix तज्ञ व्हिडिओ, वैयक्तिक डॅशबोर्ड आणि ट्रॅकिंग टूल्सद्वारे तुमच्या धूम्रपान सोडण्याच्या प्रवासात टप्प्याटप्प्याने मार्गदर्शन करते. हा प्रोग्राम तुमच्या सवयी आणि प्रगतीनुसार डिझाइन करण्यात आला आहे.",
+    "Can I use Cignix on my smartphone": "मी माझ्या स्मार्टफोनवर Cignix वापरू शकतो का",
+    "Absolutely! Download our app from the App Store or Google Play to access Cignix anytime, anywhere.": "नक्कीच! App Store किंवा Google Play वरून आमचे अ‍ॅप डाउनलोड करा आणि कुठेही, केव्हाही Cignix वापरा.",
+    "Do I need to pay to use Cignix": "Cignix वापरण्यासाठी पैसे द्यावे लागतात का",
+    "Yes, you need to pay a one-fee of ₹4999 in order to get lifetime access to the videos.": "होय, व्हिडिओंसाठी आजीवन प्रवेश मिळवण्यासाठी तुम्हाला ₹4999 चा एकदाच शुल्क द्यावे लागेल.",
+    "Who can use Cignix": "Cignix कोण वापरू शकते",
+    "Anyone who wants to quit smoking can use Cignix, regardless of how long or how much they’ve been smoking. Individuals above the age of 18 are eligible to use Cignix.": "धूम्रपान सोडू इच्छिणारा कोणीही, त्यांनी किती काळ किंवा किती प्रमाणात धूम्रपान केले आहे हे महत्त्वाचे नाही, Cignix वापरू शकतो. 18 वर्षांपेक्षा अधिक वय असलेले लोक Cignix वापरण्यास पात्र आहेत.",
+    "Can I sync my progress across devices": "मी माझी प्रगती सर्व डिव्हाइसवर सिंक करू शकतो का",
+    "Yes, your progress is stored in your account and can be accessed across multiple devices by logging in.": "होय, तुमची प्रगती तुमच्या खात्यात संग्रहित केली जाते आणि तुम्ही लॉग इन करून ती अनेक उपकरणांवर पाहू शकता.",
+    "Is my personal data safe with Cignix": "Cignix मध्ये माझा वैयक्तिक डेटा सुरक्षित आहे का",
+    "Absolutely. Cignix values your privacy and ensures that all your data is encrypted and securely stored.": "नक्कीच. Cignix तुमच्या गोपनीयतेचा आदर करते आणि तुमचा सर्व डेटा एनक्रिप्ट करून सुरक्षित ठेवते.",
+    "At Cignix, we aim to provide unmatched value through our comprehensive subscription plan, making it easy for our customers to access premium resources with a simple, hassle-free payment process": "Cignix मध्ये, आम्ही आमच्या सर्वसमावेशक सबस्क्रिप्शन प्लॅनद्वारे अतुलनीय मूल्य देण्याचा प्रयत्न करतो, ज्यामुळे आमच्या ग्राहकांना प्रीमियम संसाधनांपर्यंत प्रवेश करण्यासाठी सोपी आणि त्रास-मुक्त पेमेंट प्रक्रिया उपलब्ध होते.",
+    "Subscription Plan": "सबस्क्रिप्शन प्लॅन",
+    "Cignix offers a single subscription plan that is priced at ₹4999. Once you have made the payment, you will be allowed to access the resources for a lifetime.This single investment unlocks unlimited access to a wealth of resources personalised to meet your needs.": "Cignix एकच सबस्क्रिप्शन प्लॅन ऑफर करते ज्याची किंमत ₹4999 आहे. एकदा तुम्ही पेमेंट केल्यावर, तुम्हाला आजीवन संसाधनांमध्ये प्रवेश दिला जाईल. ही एकच गुंतवणूक तुम्हाला अमर्यादित प्रवेश अनलॉक करते, जो तुमच्या गरजेनुसार वैयक्तिकृत संसाधनांचा संग्रह देतो.",
+    "Payment Methods": "पेमेंट पद्धती",
+    "Cignix provides different types of payment options and they are listed below.": "Cignix विविध प्रकारच्या पेमेंट पर्याय प्रदान करते आणि ते खालीलप्रमाणे आहेत.",
+    "Credit Card (Visa Card/ Master Card)": "क्रेडिट कार्ड (Visa कार्ड/ Master कार्ड)",
+    "Make a single payment and enjoy unlimited lifetime access to all resources—no renewals, no extra fees.": "एकदाच पेमेंट करा आणि सर्व संसाधनांमध्ये आजीवन प्रवेश मिळवा — पुन्हा नूतनीकरण नाही, कोणतेही अतिरिक्त शुल्क नाही.",
+    "Gain instant access to all current resources and future updates, keeping you equipped with the latest videos.": "सर्व विद्यमान संसाधने आणि भविष्यातील अद्यतनांसाठी त्वरित प्रवेश मिळवा, तुम्हाला नवीनतम व्हिडिओसह अद्ययावत ठेवा.",
+    "Comprehensive Benefits": "व्यापक फायदे",
+    "Simple, One-Time Payment": "सोपे, एकदाच पेमेंट",
+    "We understand that convenience and security are paramount when it comes to managing your payments. At Cignix, we offer a variety of flexible and secure payment options to ensure a seamless experience for our users.": "आम्हाला माहिती आहे की पेमेंट व्यवस्थापन करताना सोयीस्करता आणि सुरक्षितता अत्यंत महत्त्वाची असते. Cignix मध्ये, आम्ही आमच्या वापरकर्त्यांसाठी अखंड अनुभव सुनिश्चित करण्यासाठी विविध लवचिक आणि सुरक्षित पेमेंट पर्याय प्रदान करतो.",
+    "Our one-time payment model eliminates recurring fees, offering a cost-effective solution.": "आमचा एकदाच पेमेंट मॉडेल आवर्ती शुल्क नाकारतो आणि खर्च-प्रभावी उपाय प्रदान करतो.",
+    "Credit and Debit Cards": "क्रेडिट आणि डेबिट कार्ड्स",
+    "Pay easily using your preferred credit or debit card. We support": "तुमच्या पसंतीच्या क्रेडिट किंवा डेबिट कार्डचा वापर करून सहज पैसे भरा. आम्ही समर्थन करतो.",
+    "Enjoy fast payments personalized to suit your preferences, with Razorpay.": "Razorpay द्वारे तुमच्या पसंतीनुसार वैयक्तिकृत वेगवान पेमेंट्सचा आनंद घ्या.",
+    "Use your bank's online banking services to pay directly from your account. We support a wide range of banks to ensure compatibility.": "तुमच्या बँकेच्या ऑनलाइन बँकिंग सेवांचा वापर करून तुमच्या खात्यातून थेट पैसे भरा. आम्ही सुसंगततेसाठी विस्तृत बँकांचा समर्थन करतो.",
+    "Simply use your UPI ID or scan a QR code to complete your transaction instantly. We accept payments from leading UPI providers, such as": "फक्त तुमचा UPI आयडी वापरा किंवा QR कोड स्कॅन करून तुमचे व्यवहार त्वरित पूर्ण करा. आम्ही आघाडीच्या UPI प्रदात्यांकडून पेमेंट स्वीकारतो, जसे की",
+    "Cancellation, Return & Refund Policies": "रद्द करणे, परतावा आणि रिफंड धोरणे",
+    "At Cignix, we offer a refund option, but it is available only if you request a cancellation within 7 to 10 business days of your purchase or order. Please ensure that your request falls within this window to be eligible for a refund. For any issues or inquiries regarding returns or cancellations, feel free to contact our support team for assistance.": "Cignix मध्ये, आम्ही परताव्याचा पर्याय देतो, परंतु तो फक्त तेव्हाच उपलब्ध आहे जेव्हा तुम्ही तुमच्या खरेदी किंवा ऑर्डरच्या 7 ते 10 व्यावसायिक दिवसांच्या आत रद्द करण्याची विनंती करता. कृपया खात्री करा की तुमची विनंती या कालावधीत येते जेणेकरून तुम्ही रिफंडसाठी पात्र व्हाल. परतावा किंवा रद्दीकरणाशी संबंधित कोणत्याही समस्या किंवा चौकशीसाठी आमच्या समर्थन टीमशी संपर्क साधा.",
+    "How to Subscribe to Cignix": "Cignix ची सदस्यता कशी घ्यावी",
+    "Choose Your Plan": "तुमची योजना निवडा",
+    "Visit the subscription section on our website and select the ₹4,999 Lifetime Plan.": "आमच्या वेबसाइटवरील सबस्क्रिप्शन विभागाला भेट द्या आणि ₹4,999 ची आजीवन योजना निवडा.",
+    "Enter Payment Details": "पेमेंट तपशील भरा",
+    "Choose your preferred payment method and fill in the required details": "तुमचा पसंतीचा पेमेंट पर्याय निवडा आणि आवश्यक तपशील भरा",
+    "Complete the Payment": "पेमेंट पूर्ण करा",
+    "Follow the secure checkout process to finalize your subscription.": "तुमची सदस्यता अंतिम करण्यासाठी सुरक्षित चेकआउट प्रक्रियेचे पालन करा.",
+    "Enjoy Lifetime Access": "आनंद घ्या आजीवन प्रवेशाचा",
+    "Once the payment is successful, your account will be instantly activated, granting you unlimited access to our videos.": "एकदा पेमेंट यशस्वी झाल्यानंतर, तुमचे खाते त्वरित सक्रिय केले जाईल, जे तुम्हाला आमच्या सर्व व्हिडिओंमध्ये अमर्यादित प्रवेश प्रदान करेल.",
+    "In order to resolve a complaint regarding the Services or to receive further information regarding the use of the Services, please contact us at": "सेवांबाबत तक्रार सोडवण्यासाठी किंवा सेवांच्या वापराबाबत अधिक माहिती मिळवण्यासाठी, कृपया आम्हाला येथे संपर्क करा",
+    "Cignix is dedicated to providing reliable and efficient technical support to ensure you have a smooth and seamless experience with our services. Our expert team is ready to assist you with any challenges you may face, helping you get back on track quickly and efficiently.": "Cignix आपल्याला आमच्या सेवांसह सुरळीत आणि अखंड अनुभव मिळावा यासाठी विश्वासार्ह आणि कार्यक्षम तांत्रिक समर्थन प्रदान करण्यास कटिबद्ध आहे. आपल्याला कोणतीही अडचण आली तरी आमचा तज्ज्ञ संघ आपली मदत करण्यासाठी तयार आहे, जेणेकरून आपण आपल्या कार्यावर लवकरात लवकर परत येऊ शकता.",
+    "Common issues we solve": "आम्ही सोडवतो अशा सामान्य समस्या",
+    "Login Issues": "लॉगिन समस्या",
+    "Struggling to access your account? Whether it’s a forgotten password, account lockout, or a verification problem, our team is here to guide you through the process and ensure you regain access promptly": "आपल्या खात्यात प्रवेश करण्यात अडचण येत आहे का? पासवर्ड विसरला असेल, खाते लॉक झाले असेल किंवा पडताळणीची समस्या असेल, तरी आमचा संघ आपल्याला मार्गदर्शन करण्यासाठी येथे आहे, जेणेकरून आपण आपला प्रवेश त्वरित पुनर्प्राप्त करू शकता.",
+    "Troubleshooting App Errors": "ॲप त्रुटी निराकरण",
+    "Syncing Devices": "डिव्हाइस समक्रमित करणे",
+    "Need help connecting and syncing devices with our platform? We assist with setup, configuration, and troubleshooting to ensure a seamless multi-device experience.": "आमच्या प्लॅटफॉर्मवर डिव्हाइस कनेक्ट करण्यासाठी आणि समक्रमित करण्यासाठी मदतीची आवश्यकता आहे का? आम्ही सेटअप, कॉन्फिगरेशन आणि समस्या निराकरणात मदत करतो, जेणेकरून तुम्हाला एक अखंड मल्टी-डिव्हाइस अनुभव मिळेल.",
+    "Restoring Lost Progress": "गमावलेली प्रगती पुनर्संचयित करणे",
+    "Lost your progress or data? Don’t worry—our support team helps recover your information, so you can continue from where you left off without losing valuable time or effort.": "आपली प्रगती किंवा डेटा हरवला आहे का? काळजी करू नका—आमचा सहाय्यक संघ तुमची माहिती पुनर्प्राप्त करण्यात मदत करतो, जेणेकरून आपण जिथे थांबलात तिथून पुढे चालू ठेवू शकता, तुमचा मौल्यवान वेळ आणि प्रयत्न वाचवू शकता.",
+    "Sign-up": "नोंदणी करा",
+    "How does Cignix work": "Cignix कसे कार्य करते",
+     "Encountering errors or glitches while using our app or platform? We provide step-by-step assistance to diagnose and resolve technical issues, ensuring optimal performance.": "आमच्या अ‍ॅप किंवा प्लॅटफॉर्मचा वापर करताना त्रुटी किंवा अडचणी येत आहेत का? आम्ही तांत्रिक अडचणी शोधून काढण्यासाठी आणि सोडवण्यासाठी टप्प्याटप्प्याने सहाय्य प्रदान करतो, जेणेकरून सर्वोत्तम कार्यक्षमता सुनिश्चित करता येईल."
   },
   "ContactUs": {
     "We’re committed to offering the best possible support, ensuring your experience with us is smooth!": "आम्ही सर्वोत्तम शक्य समर्थन देण्यास वचनबद्ध आहोत, त्यामुळे तुमचा आमच्यासोबतचा अनुभव सुरळीत असेल!",
