--- a/src/language/locales/ta.json
+++ b/src/language/locales/ta.json
@@ -225,7 +225,100 @@
     "Get Started With Cignix": "Cignix உடன் தொடங்குங்கள்",
     "We're so glad you're here. Quitting smoking is a journey, and you don’t have to do it alone. Whether you're looking for guidance, helpful tips, or answers to your questions, we’re here to support you every step of the way. Browse the sections below to get the help you need and take your first step toward a healthier, smoke-free life.": "நீங்கள் இங்கே வந்ததற்கு நாங்கள் மிகவும் மகிழ்ச்சியடைகிறோம். புகைபிடிப்பதை நிறுத்துவது ஒரு பயணம், நீங்கள் இதை தனியாக செய்ய வேண்டிய அவசியமில்லை. நீங்கள் வழிகாட்டல், பயனுள்ள குறிப்புகள் அல்லது உங்கள் கேள்விகளுக்கு பதில்கள் தேடுகிறீர்களா, எங்கள் ஆதரவு உங்களுக்கு ஒவ்வொரு படியிலும் உள்ளது. நீங்கள் தேவைப்படும் உதவியைப் பெற கீழே உள்ள பிரிவுகளை உலாவவும் மற்றும் ஆரோக்கியமான, புகைமூட்டமில்லாத வாழ்க்கைக்கு உங்கள் முதல் படியை எடுக்கவும்.",
     "Welcome to the Cignix Help Center!": "Cignix உதவி மையத்திற்கு வரவேற்கிறோம்!",
-    "Help Center": "உதவி மையம்"
+    "Help Center": "உதவி மையம்",
+    "Embark on your journey to quit smoking with Cignix. With our simple resources and dedicated support, you're never alone on this path.": "Cignix உடன் புகைபிடிப்பதை நிறுத்த உங்கள் பயணத்தை தொடங்குங்கள். எங்கள் எளிமையான வளங்கள் மற்றும் அர்ப்பணிக்கப்பட்ட ஆதரவுடன், இந்த பாதையில் நீங்கள் ஒருபோதும் தனியாக இருக்க மாட்டீர்கள்.",
+    "Sign Up": "பதிவு செய்யவும்",
+    "Head over to the landing page of Cignix and click on the": "Cignix இன் முதன்மை பக்கத்திற்குச் சென்று கிளிக் செய்யவும்",
+    "Sign-in": "உள்நுழை",
+    "tab.": "தாவல்.",
+    "Then, select the": "பின்னர் தேர்ந்தெடுக்கவும்",
+    "on the next screen.": "அடுத்த திரையில்.",
+    "Now, fill in the required details, including Name, email ID, mobile number, DOB, and gender.": "இப்போது, பெயர், மின்னஞ்சல் ஐடி, கைபேசி எண், பிறந்த தேதி மற்றும் பாலினம் உள்ளிட்ட தேவையான விவரங்களை நிரப்பவும்.",
+    "Enter a secure password for Cignix’s account.": "Cignix கணக்கிற்கு ஒரு பாதுகாப்பான கடவுச்சொல்லை உள்ளிடவும்.",
+    "Click on the": "இதனை கிளிக் செய்யவும்",
+    "Get Started": "தொடங்கவும்",
+    "Now option and you have to take a": "இப்போது தேர்வைத் தேர்ந்தெடுக்கவும் மற்றும் நீங்கள் எடுக்க வேண்டியது",
+    "SIM test": "SIM சோதனை",
+    "Then, you can access the free videos available.": "பின்னர், கிடைக்கும் இலவச வீடியோக்களை அணுகலாம்.",
+    "Note": "குறிப்பு",
+    "In addition, you can also sign up using your Google account.": "மேலும், உங்கள் Google கணக்கைப் பயன்படுத்தியும் பதிவு செய்யலாம்.",
+    "Log In": "உள்நுழையவும்",
+    "Using Password": "கடவுச்சொல்லைப் பயன்படுத்தி",
+    "Once registered, click on the": "பதிவுசெய்த பிறகு, இதை கிளிக் செய்யவும்",
+    "tab on the landing page.": "முதன்மை பக்கத்திலுள்ள தாவல்.",
+    "Next, enter the registered mobile number or email ID.": "பின்னர், பதிவு செய்யப்பட்ட கைபேசி எண் அல்லது மின்னஞ்சல் ஐடியை உள்ளிடவும்.",
+    "Following that, click on the": "அதற்குப் பிறகு இதை கிளிக் செய்யவும்",
+    "Password": "கடவுச்சொல்",
+    "bar.": "பாரில்.",
+    "Then, input the appropriate password and click on": "பின்னர், சரியான கடவுச்சொல்லை உள்ளிட்டு கிளிக் செய்யவும்",
+    "Continue": "தொடரவும்",
+    "Using OTP": "OTP ஐ பயன்படுத்தி",
+    "On the landing page, click on the": "முதன்மை பக்கத்தில் இதை கிளிக் செய்யவும்",
+    "option.": "விருப்பத்தைக் கிளிக் செய்யவும்.",
+    "Then, input the registered email ID or mobile number.": "பின்னர், பதிவு செய்யப்பட்ட மின்னஞ்சல் ஐடி அல்லது கைபேசி எண்னை உள்ளிடவும்.",
+    "Select the OTP bar and you will receive an": "OTP பாரை தேர்வு செய்யவும், பிறகு உங்களுக்கு ஒரு",
+    "via registered email ID or mobile number.": "பதிவு செய்யப்பட்ட மின்னஞ்சல் ஐடி அல்லது கைபேசி எண்ணின் மூலம் கிடைக்கும்.",
+    "Enter the OTP and you can further access the videos available on Cignix.": "OTP ஐ உள்ளிட்டு, Cignix இல் உள்ள வீடியோக்களை மேலும் அணுகலாம்.",
+    "Alternatively, you can sign in using your Google account or OTP.": "மாற்றாக, உங்கள் Google கணக்கு அல்லது OTP ஐ பயன்படுத்தி உள்நுழையலாம்.",
+    "Customize Your Profile": "உங்கள் சுயவிவரத்தை தனிப்பயனாக்கவும்",
+    "To customize your profile on Cignix, you have to take the SIM test.": "Cignix இல் உங்கள் சுயவிவரத்தை தனிப்பயனாக்க, SIM சோதனையை எடுக்க வேண்டும்.",
+    "Begin the test to assess your smoking habits and readiness to quit. Simply select a number on the scale that best reflects your agreement, likelihood, or preference.": "உங்கள் புகைபிடிக்கும் பழக்கங்கள் மற்றும் நிறுத்தும் தயாரிப்பை மதிப்பீடு செய்ய சோதனையைத் தொடங்கவும். எளிதாக, உங்கள் ஒப்புதல், நிகழ்தகவு அல்லது விருப்பத்தை பிரதிபலிக்கும் எண்ணை அளவீட்டில் தேர்ந்தெடுக்கவும்.",
+    "Your responses will help us provide tailored support for your quit-smoking journey.": "உங்கள் பதில்கள், உங்கள் புகைபிடிப்பதை நிறுத்தும் பயணத்திற்கேற்ப தனிப்பயன் ஆதரவை வழங்க எங்களுக்கு உதவும்.",
+    "Begin Your Program": "உங்கள் திட்டத்தைத் தொடங்குங்கள்",
+    "Access your personalized dashboard and start your quit-smoking journey with our expert-guided videos.": "உங்கள் தனிப்பயன் டாஷ்போர்டை அணுகி எங்கள் நிபுணர்களால் வழிகாட்டப்படும் வீடியோக்களுடன் புகைபிடிப்பதை நிறுத்தும் பயணத்தைத் தொடங்குங்கள்.",
+    "What is Cignix": "Cignix என்றால் என்ன",
+    "Cignix provides you with step-by-step guidance through expert videos, personalized dashboards, and tracking tools to support you in quitting smoking. The program is designed to your habits and progress, ensuring a customized experience.": "Cignix உங்களுக்கு புகைபிடிப்பதை நிறுத்துவதற்கு ஆதரவளிக்க நிபுணர் வீடியோக்கள், தனிப்பயன் டாஷ்போர்டுகள் மற்றும் கண்காணிப்பு கருவிகள் மூலம் படிப்படியாக வழிகாட்டுதல்களை வழங்குகிறது. இந்த திட்டம் உங்கள் பழக்கங்கள் மற்றும் முன்னேற்றத்திற்கு ஏற்ப வடிவமைக்கப்பட்டுள்ளது, தனிப்பயன் அனுபவத்தை உறுதி செய்கிறது.",
+    "Can I use Cignix on my smartphone": "நான் என் ஸ்மார்ட்போனில் Cignix ஐ பயன்படுத்த முடியுமா",
+    "Absolutely! Download our app from the App Store or Google Play to access Cignix anytime, anywhere.": "நிச்சயமாக! எங்கள் செயலியை App Store அல்லது Google Play லிருந்து பதிவிறக்கம் செய்து எப்போதும், எங்கும் Cignix ஐ அணுகலாம்.",
+    "Do I need to pay to use Cignix": "Cignix ஐ பயன்படுத்த பணம் செலுத்த வேண்டுமா",
+    "Yes, you need to pay a one-fee of ₹4999 in order to get lifetime access to the videos.": "ஆம், வீடியோக்களை ஆயுள் முழுவதும் அணுக ₹4999 என்ற ஒருமுறை கட்டணத்தை செலுத்த வேண்டும்.",
+    "Who can use Cignix": "யார் Cignix ஐ பயன்படுத்தலாம்",
+    "Anyone who wants to quit smoking can use Cignix, regardless of how long or how much they’ve been smoking. Individuals above the age of 18 are eligible to use Cignix.": "புகைபிடிப்பதை நிறுத்த விரும்பும் யாரும் Cignix ஐ பயன்படுத்தலாம், அவர்கள் எவ்வளவு காலமாக அல்லது எவ்வளவு புகைபிடித்தாலும் முக்கியமல்ல. 18 வயதை கடந்தவர்கள் பயன்படத்தக்கவர்கள்.",
+    "Can I sync my progress across devices": "நான் எனது முன்னேற்றத்தை பல சாதனங்களில் ஒத்திசைக்க முடியுமா",
+    "Yes, your progress is stored in your account and can be accessed across multiple devices by logging in.": "ஆம், உங்கள் முன்னேற்றம் உங்கள் கணக்கில் சேமிக்கப்படும் மற்றும் பல சாதனங்களில் உள்நுழைந்து அதை அணுகலாம்.",
+    "Is my personal data safe with Cignix": "Cignix இல் என் தனிப்பட்ட தரவு பாதுகாப்பானதா",
+    "Absolutely. Cignix values your privacy and ensures that all your data is encrypted and securely stored.": "நிச்சயமாக. Cignix உங்கள் தனியுரிமையை மதிக்கிறது மற்றும் உங்கள் அனைத்து தரவுகளும் குறியாக்கம் செய்யப்பட்டு பாதுகாப்பாக சேமிக்கப்படும் என்பதனை உறுதி செய்கிறது.",
+    "At Cignix, we aim to provide unmatched value through our comprehensive subscription plan, making it easy for our customers to access premium resources with a simple, hassle-free payment process": "Cignix-இல், எங்கள் விரிவான சந்தா திட்டத்தின் மூலம் ஒப்பற்ற மதிப்பை வழங்குவதே எங்கள் நோக்கம். எளிமையான மற்றும் பிரச்சனையற்ற கட்டண செயல்முறையின் மூலம் எங்கள் வாடிக்கையாளர்கள் பிரீமியம் வளங்களை எளிதாக அணுக முடியும்.",
+    "Subscription Plan": "சந்தா திட்டம்",
+    "Cignix offers a single subscription plan that is priced at ₹4999. Once you have made the payment, you will be allowed to access the resources for a lifetime.This single investment unlocks unlimited access to a wealth of resources personalised to meet your needs.": "Cignix ₹4999 க்கு ஒரு ஒரே சந்தா திட்டத்தை வழங்குகிறது. நீங்கள் பணம் செலுத்திய பிறகு, வாழ்நாள் முழுவதும் வளங்களை அணுக அனுமதிக்கப்படுவீர்கள். உங்கள் தேவைகளுக்கு ஏற்ப தனிப்பயனாக்கப்பட்ட செல்வ வளங்களை அணுக இந்த ஒரு முதலீடு போதும்.",
+    "Payment Methods": "கட்டண முறைகள்",
+    "Cignix provides different types of payment options and they are listed below.": "Cignix பல்வேறு வகையான கட்டண விருப்பங்களை வழங்குகிறது மற்றும் அவை கீழே பட்டியலிடப்பட்டுள்ளன.",
+    "Credit Card (Visa Card/ Master Card)": "கிரெடிட் கார்டு (Visa கார்டு/ Master கார்டு)",
+    "Make a single payment and enjoy unlimited lifetime access to all resources—no renewals, no extra fees.": "ஒரே முறை கட்டணம் செலுத்தி, அனைத்து வளங்களையும் வாழ்நாள் முழுவதும் வரம்பில்லாமல் பயன்படுத்துங்கள்—புதிய புதுப்பிப்புகள் இல்லை, கூடுதல் கட்டணங்கள் இல்லை.",
+    "Gain instant access to all current resources and future updates, keeping you equipped with the latest videos.": "அனைத்து தற்போதைய வளங்கள் மற்றும் எதிர்கால புதுப்பிப்புகளுக்கு உடனடி அணுகலைப் பெறுங்கள், மேலும் உங்களை எப்போதும் புதிய வீடியோக்களுடன் தயார் நிலையில் வைத்திருங்கள்.",
+    "Comprehensive Benefits": "விரிவான நன்மைகள்",
+    "Simple, One-Time Payment": "எளிய, ஒரே முறை கட்டணம்",
+    "We understand that convenience and security are paramount when it comes to managing your payments. At Cignix, we offer a variety of flexible and secure payment options to ensure a seamless experience for our users.": "உங்கள் கட்டணங்களை நிர்வகிக்கும் போது வசதி மற்றும் பாதுகாப்பு முக்கியமானவை என்பதை நாங்கள் புரிந்துகொள்கிறோம். Cignix-இல் எங்கள் பயனர்களுக்கான எளிமையான அனுபவத்திற்காக பல்வேறு நெகிழ்வான மற்றும் பாதுகாப்பான கட்டண விருப்பங்களை வழங்குகிறோம்.",
+    "Our one-time payment model eliminates recurring fees, offering a cost-effective solution.": "எங்கள் ஒரே முறை கட்டண முறைமை வழக்கமான கட்டணங்களை நீக்கி, செலவுத்திறனான தீர்வை வழங்குகிறது.",
+    "Credit and Debit Cards": "கிரெடிட் மற்றும் டெபிட் கார்டுகள்",
+    "Pay easily using your preferred credit or debit card. We support": "உங்களுக்குப் பிடித்த கிரெடிட் அல்லது டெபிட் கார்டைப் பயன்படுத்தி எளிதாக கட்டணம் செலுத்துங்கள். நாங்கள் ஆதரிக்கிறோம்",
+    "Enjoy fast payments personalized to suit your preferences, with Razorpay.": "உங்கள் விருப்பங்களுக்கு ஏற்ப தனிப்பயனாக்கப்பட்ட விரைவான கட்டண அனுபவத்தை Razorpay மூலம் அனுபவிக்கலாம்.",
+    "Use your bank's online banking services to pay directly from your account. We support a wide range of banks to ensure compatibility.": "உங்கள் வங்கியின் ஆன்லைன் வங்கி சேவைகளைப் பயன்படுத்தி உங்கள் கணக்கிலிருந்து நேரடியாக கட்டணம் செலுத்தலாம். பொருந்தக்கூடியதாக இருக்க பல்வேறு வங்கிகளை நாங்கள் ஆதரிக்கிறோம்.",
+    "Simply use your UPI ID or scan a QR code to complete your transaction instantly. We accept payments from leading UPI providers, such as": "உங்கள் UPI ஐடி அல்லது QR குறியீட்டை ஸ்கேன் செய்து உடனடி பரிவர்த்தனை முடிக்கலாம். முன்னணி UPI வழங்குநர்களிடமிருந்து நாங்கள் கட்டணங்களை ஏற்கிறோம், உதாரணமாக",
+    "Cancellation, Return & Refund Policies": "ரத்து, திருப்பி வழங்கல் மற்றும் பணத்தைத் திருப்பி வழங்கும் கொள்கைகள்",
+    "At Cignix, we offer a refund option, but it is available only if you request a cancellation within 7 to 10 business days of your purchase or order. Please ensure that your request falls within this window to be eligible for a refund. For any issues or inquiries regarding returns or cancellations, feel free to contact our support team for assistance.": "Cignix-இல், எங்களிடம் பணத்தைத் திருப்பி வழங்கும் விருப்பம் உள்ளது. ஆனால் நீங்கள் வாங்கிய 7 முதல் 10 பணிநாட்களில் ரத்து கோரிக்கை விடுப்பட்டாலே அந்த வாய்ப்பு வழங்கப்படும். உங்கள் கோரிக்கை இந்த கால எல்லைக்குள் உள்ளதா என்பதை உறுதிசெய்யவும். திருப்பி வழங்கல் அல்லது ரத்து குறித்த கேள்விகளுக்கு எங்கள் ஆதரவு குழுவைத் தொடர்பு கொள்ளலாம்.",
+    "How to Subscribe to Cignix": "Cignix-க்கு எப்படி சந்தாதாரராகலாம்",
+    "Choose Your Plan": "உங்கள் திட்டத்தை தேர்வுசெய்யவும்",
+    "Visit the subscription section on our website and select the ₹4,999 Lifetime Plan.": "எங்கள் இணையதளத்தில் உள்ள சந்தா பிரிவுக்கு சென்று ₹4,999 வாழ்நாள் திட்டத்தை தேர்வு செய்யவும்.",
+    "Enter Payment Details": "கட்டண விவரங்களை உள்ளிடவும்",
+    "Choose your preferred payment method and fill in the required details": "உங்களுக்கு விருப்பமான கட்டண முறையைத் தேர்ந்தெடுத்து தேவையான விவரங்களை உள்ளிடவும்",
+    "Complete the Payment": "கட்டணத்தை முடிக்கவும்",
+    "Follow the secure checkout process to finalize your subscription.": "பாதுகாப்பான சோதனை செயல்முறையை பின்பற்றவும் மற்றும் உங்கள் சந்தாவை இறுதி செய்யவும்.",
+    "Enjoy Lifetime Access": "வாழ்நாள் அணுகலை அனுபவிக்கவும்",
+    "Once the payment is successful, your account will be instantly activated, granting you unlimited access to our videos.": "கட்டணம் வெற்றிகரமாக செலுத்தப்பட்டதும், உங்கள் கணக்கு உடனடியாக செயல்படுத்தப்படும் மற்றும் எங்கள் வீடியோக்களை வரம்பில்லாமல் அணுக அனுமதிக்கப்படும்.",
+    "In order to resolve a complaint regarding the Services or to receive further information regarding the use of the Services, please contact us at": "எங்கள் சேவைகள் குறித்த புகாரைத் தீர்க்கவோ அல்லது சேவைகளைப் பற்றிய கூடுதல் தகவல்களைப் பெறவோ, தயவுசெய்து எங்களை தொடர்பு கொள்ளவும்",
+    "Cignix is dedicated to providing reliable and efficient technical support to ensure you have a smooth and seamless experience with our services. Our expert team is ready to assist you with any challenges you may face, helping you get back on track quickly and efficiently.": "சிக்னிக்ஸ் நம்பகமான மற்றும் திறமையான தொழில்நுட்ப ஆதரவை வழங்க உழைக்கிறது, எங்கள் சேவைகளை நீங்கள் பிரச்சனையில்லாமல் மற்றும் எளிதாக அனுபவிக்கலாம் என்பதற்காக. உங்களுக்கு ஏற்பட்ட எந்தவொரு சிக்கலையும் எளிதாக மற்றும் விரைவாக தீர்க்க எங்கள் நிபுணர் குழு தயார் நிலையில் உள்ளது.",
+    "Common issues we solve": "நாங்கள் தீர்க்கும் பொதுவான சிக்கல்கள்",
+    "Login Issues": "உள்நுழைவு சிக்கல்கள்",
+    "Struggling to access your account? Whether it’s a forgotten password, account lockout, or a verification problem, our team is here to guide you through the process and ensure you regain access promptly": "உங்கள் கணக்கை அணுக சிரமப்படுகிறீர்களா? அது மறந்துபோன கடவுச்சொல், கணக்கு பூட்டல் அல்லது சரிபார்ப்பு சிக்கல் எதுவாக இருந்தாலும், எங்கள் குழு உங்களுக்கு வழிகாட்டி விரைவில் மீண்டும் அணுக உங்களை உறுதிப்படுத்தும்.",
+    "Troubleshooting App Errors": "அப்பிளிக்கேஷன் பிழைகள் தீர்வு",
+    "Syncing Devices": "சாதனங்களை ஒத்திசைக்கும்",
+    "Need help connecting and syncing devices with our platform? We assist with setup, configuration, and troubleshooting to ensure a seamless multi-device experience.": "எங்கள் பிளாட்ஃபாரத்தில் உங்கள் சாதனங்களை இணைத்து ஒத்திசைக்க உதவி தேவைப்படுகிறதா? எங்கள் குழு அமைப்பு, கட்டமைப்பு மற்றும் பிழைநீக்கத்தில் உதவுகிறது, உங்களுக்கு சிறந்த பல்சாதன அனுபவத்தை வழங்குவதற்காக.",
+    "Restoring Lost Progress": "இழந்த முன்னேற்றத்தை மீட்டெடுப்பது",
+    "Lost your progress or data? Don’t worry—our support team helps recover your information, so you can continue from where you left off without losing valuable time or effort.": "உங்கள் முன்னேற்றம் அல்லது தரவை இழந்துவிட்டீர்களா? கவலைப்பட வேண்டாம்—எங்கள் ஆதரவு குழு உங்கள் தகவலை மீட்டெடுக்க உதவுகின்றது, எனவே நீங்கள் இழந்த இடத்திலிருந்து மீண்டும் தொடங்கலாம், உங்கள் நேரத்தையும் முயற்சியையும் வீணாக்காமல்.",
+    "Sign-up": "பதிவு செய்யவும்",
+    "How does Cignix work": "Cignix எவ்வாறு வேலை செய்கிறது",
+    "Encountering errors or glitches while using our app or platform? We provide step-by-step assistance to diagnose and resolve technical issues, ensuring optimal performance.": "எங்கள் பயன்பாடு அல்லது தளத்தைப் பயன்படுத்தும் போது பிழைகள் அல்லது வழுதிகள் ஏற்படுகிறதா? தொழில்நுட்ப சிக்கல்களை கண்டறிந்து தீர்க்க எங்கள் படிப்படியான உதவியை வழங்குகிறோம், இது சிறந்த செயல்திறனை உறுதி செய்கிறது."
   },
   "ContactUs": {
     "We’re committed to offering the best possible support, ensuring your experience with us is smooth!": "உங்களுக்கு சிறந்த ஆதரவை வழங்குவதில் நாங்கள் உறுதியாக உள்ளோம், உங்கள் அனுபவம் எங்களுடன் சீராக இருக்கும் என்பதை உறுதி செய்கிறோம்!",
