--- a/src/language/locales/te.json
+++ b/src/language/locales/te.json
@@ -206,7 +206,100 @@
     "Get Started With Cignix": "Cignix తో ప్రారంభించండి",
     "We're so glad you're here. Quitting smoking is a journey, and you don’t have to do it alone. Whether you're looking for guidance, helpful tips, or answers to your questions, we’re here to support you every step of the way. Browse the sections below to get the help you need and take your first step toward a healthier, smoke-free life.": "మీరు ఇక్కడ ఉన్నందుకు మేము చాలా ఆనందంగా ఉన్నాము. ధూమపానం మానడం ఒక ప్రయాణం, మరియు మీరు దీన్ని ఒంటరిగా చేయాల్సిన అవసరం లేదు. మీరు మార్గదర్శనం, ఉపయోగకరమైన చిట్కాలు లేదా మీ ప్రశ్నలకు సమాధానాలు కోరుకుంటున్నారా, మేము మీకు ప్రతి దశలో మద్దతు ఇవ్వడానికి ఇక్కడ ఉన్నాము. మీరు అవసరమైన సహాయం పొందడానికి క్రింద ఉన్న విభాగాలను బ్రౌజ్ చేయండి మరియు ఆరోగ్యకరమైన, ధూమపానరహిత జీవితానికి మీ మొదటి అడుగు వేయండి.",
     "Welcome to the Cignix Help Center!": "Cignix సహాయ కేంద్రానికి స్వాగతం!",
-    "Help Center": "సహాయ కేంద్రం"
+    "Help Center": "సహాయ కేంద్రం",
+    "Embark on your journey to quit smoking with Cignix. With our simple resources and dedicated support, you're never alone on this path.": "సిగ్నిక్స్‌తో పొగతాగడం మానేయడానికి మీ ప్రయాణాన్ని ప్రారంభించండి. మా సరళమైన వనరులు మరియు అంకితభావంతో అందించే మద్దతుతో, మీరు ఈ మార్గంలో ఎప్పుడూ ఒంటరిగా ఉండరు.",
+    "Sign Up": "చేరండి",
+    "Head over to the landing page of Cignix and click on the": "సిగ్నిక్స్ ల్యాండింగ్ పేజీకి వెళ్లి క్లిక్ చేయండి",
+    "Sign-in": "ప్రవేశించండి",
+    "tab.": "ట్యాబ్.",
+    "Then, select the": "అప్పుడు ఎంచుకోండి",
+    "on the next screen.": "తర్వాతి స్క్రీన్‌లో.",
+    "Now, fill in the required details, including Name, email ID, mobile number, DOB, and gender.": "ఇప్పుడు, పేరు, ఇమెయిల్ ఐడీ, మొబైల్ నంబర్, పుట్టిన తేది మరియు లింగం వంటి అవసరమైన వివరాలను నింపండి.",
+    "Enter a secure password for Cignix’s account.": "సిగ్నిక్స్ ఖాతాకు ఒక సురక్షితమైన పాస్‌వర్డ్‌ని నమోదు చేయండి.",
+    "Click on the": "దీనిపై క్లిక్ చేయండి",
+    "Get Started": "ప్రారంభించండి",
+    "Now option and you have to take a": "ఇప్పుడే ఎంపికను ఎంచుకుని మీరు చేయాల్సింది",
+    "SIM test": "SIM పరీక్ష",
+    "Then, you can access the free videos available.": "తర్వాత, అందుబాటులో ఉన్న ఉచిత వీడియోలను యాక్సెస్ చేయవచ్చు.",
+    "Note": "గమనిక",
+    "In addition, you can also sign up using your Google account.": "అదనంగా, మీరు మీ Google ఖాతాను ఉపయోగించి కూడా నమోదు చేయవచ్చు.",
+    "Log In": "ప్రవేశించండి",
+    "Using Password": "పాస్‌వర్డ్ ఉపయోగించి",
+    "Once registered, click on the": "ఒకసారి నమోదు అయిన తర్వాత, క్లిక్ చేయండి",
+    "tab on the landing page.": "ల్యాండింగ్ పేజీలోని ట్యాబ్‌పై.",
+    "Next, enter the registered mobile number or email ID.": "తర్వాత, మీరు నమోదు చేసిన మొబైల్ నంబర్ లేదా ఇమెయిల్ ఐడీని నమోదు చేయండి.",
+    "Following that, click on the": "అదనంగా దీనిపై క్లిక్ చేయండి",
+    "Password": "పాస్‌వర్డ్",
+    "bar.": "బార్.",
+    "Then, input the appropriate password and click on": "తర్వాత, సరైన పాస్‌వర్డ్‌ని నమోదు చేసి క్లిక్ చేయండి",
+    "Continue": "కొనసాగించండి",
+    "Using OTP": "OTP ఉపయోగించి",
+    "On the landing page, click on the": "ల్యాండింగ్ పేజీలో దీనిపై క్లిక్ చేయండి",
+    "option.": "ఎంపికపై.",
+    "Then, input the registered email ID or mobile number.": "తర్వాత, మీరు నమోదు చేసిన ఇమెయిల్ ఐడీ లేదా మొబైల్ నంబర్‌ను నమోదు చేయండి.",
+    "Select the OTP bar and you will receive an": "OTP బార్‌ను ఎంచుకోండి మరియు మీరు పొందుతారు",
+    "via registered email ID or mobile number.": "మీరు నమోదు చేసిన ఇమెయిల్ ఐడీ లేదా మొబైల్ నంబర్ ద్వారా.",
+    "Enter the OTP and you can further access the videos available on Cignix.": "OTPని నమోదు చేసి, సిగ్నిక్స్‌లో అందుబాటులో ఉన్న వీడియోలను యాక్సెస్ చేయవచ్చు.",
+    "Alternatively, you can sign in using your Google account or OTP.": "ప్రత్యామ్నాయంగా, మీరు మీ Google ఖాతా లేదా OTPని ఉపయోగించి లాగిన్ అవ్వవచ్చు.",
+    "Customize Your Profile": "మీ ప్రొఫైల్‌ను కస్టమైజ్ చేయండి",
+    "To customize your profile on Cignix, you have to take the SIM test.": "సిగ్నిక్స్‌లో మీ ప్రొఫైల్‌ను కస్టమైజ్ చేయడానికి, మీరు SIM పరీక్షను ఇవ్వాలి.",
+    "Begin the test to assess your smoking habits and readiness to quit. Simply select a number on the scale that best reflects your agreement, likelihood, or preference.": "మీ పొగతాగే అలవాట్లు మరియు మానేందుకు సిద్ధతను అంచనా వేయడానికి పరీక్షను ప్రారంభించండి. మీ అభిప్రాయం లేదా ప్రాధాన్యతను ప్రతిబింబించే సంఖ్యను స్కేల్‌పై ఎంచుకోండి.",
+    "Your responses will help us provide tailored support for your quit-smoking journey.": "మీ ప్రతిస్పందనలు మీ పొగతాగడం మానేందుకు మేము అనుకూలమైన మద్దతు అందించడంలో సహాయపడతాయి.",
+    "Begin Your Program": "మీ ప్రోగ్రామ్‌ను ప్రారంభించండి",
+    "Access your personalized dashboard and start your quit-smoking journey with our expert-guided videos.": "మీ వ్యక్తిగత డాష్‌బోర్డ్‌ను యాక్సెస్ చేసి, మా నిపుణుల మార్గదర్శకత్వం ఉన్న వీడియోలతో మీ పొగతాగడం మానేందుకు ప్రయాణాన్ని ప్రారంభించండి.",
+    "What is Cignix": "సిగ్నిక్స్ అంటే ఏమిటి",
+    "Cignix provides you with step-by-step guidance through expert videos, personalized dashboards, and tracking tools to support you in quitting smoking. The program is designed to your habits and progress, ensuring a customized experience.": "సిగ్నిక్స్ మీ పొగతాగడం మానేందుకు మద్దతుగా నిపుణుల వీడియోలు, వ్యక్తిగత డాష్‌బోర్డ్‌లు మరియు ట్రాకింగ్ టూల్‌లతో దశల వారీ మార్గదర్శకత్వాన్ని అందిస్తుంది. ఈ ప్రోగ్రామ్ మీ అలవాట్లు మరియు పురోగతికి అనుగుణంగా రూపొందించబడింది.",
+    "Can I use Cignix on my smartphone": "నేను నా స్మార్ట్‌ఫోన్‌లో సిగ్నిక్స్‌ను ఉపయోగించగలనా",
+    "Absolutely! Download our app from the App Store or Google Play to access Cignix anytime, anywhere.": "ఖచ్చితంగా! App Store లేదా Google Play నుండి మా యాప్‌ను డౌన్‌లోడ్ చేసుకుని ఎప్పుడైనా, ఎక్కడైనా సిగ్నిక్స్‌ను యాక్సెస్ చేయండి.",
+    "Do I need to pay to use Cignix": "సిగ్నిక్స్‌ను ఉపయోగించడానికి నేను డబ్బు చెల్లించాలా",
+    "Yes, you need to pay a one-fee of ₹4999 in order to get lifetime access to the videos.": "అవును, వీడియోల జీవితకాల యాక్సెస్ కోసం ₹4999 ఒకసారి చెల్లించాలి.",
+    "Who can use Cignix": "సిగ్నిక్స్‌ను ఎవరు ఉపయోగించగలరు",
+    "Anyone who wants to quit smoking can use Cignix, regardless of how long or how much they’ve been smoking. Individuals above the age of 18 are eligible to use Cignix.": "పొగతాగడం మానాలనుకునే ఎవ్వరైనా సిగ్నిక్స్‌ను ఉపయోగించవచ్చు, వారు ఎంతకాలం లేదా ఎంతగా పొగతాగుతున్నారన్నది ముఖ్యమైనది కాదు. 18 సంవత్సరాలు పైబడిన వ్యక్తులు సిగ్నిక్స్ ఉపయోగించడానికి అర్హులు.",
+    "Can I sync my progress across devices": "నేను నా పురోగతిని పలు పరికరాలలో సింక్ చేయగలనా",
+    "Yes, your progress is stored in your account and can be accessed across multiple devices by logging in.": "అవును, మీ పురోగతి మీ ఖాతాలో నిల్వ చేయబడుతుంది మరియు మీరు లాగిన్ అయిన పలు పరికరాలలో దీనిని యాక్సెస్ చేయవచ్చు.",
+    "Is my personal data safe with Cignix": "సిగ్నిక్స్‌లో నా వ్యక్తిగత డేటా సురక్షితంగా ఉందా",
+    "Absolutely. Cignix values your privacy and ensures that all your data is encrypted and securely stored.": "ఖచ్చితంగా. సిగ్నిక్స్ మీ గోప్యతను గౌరవిస్తుంది మరియు మీ డేటా మొత్తం గూఢచరితంగా నిల్వ చేయబడేలా చూస్తుంది.",
+    "At Cignix, we aim to provide unmatched value through our comprehensive subscription plan, making it easy for our customers to access premium resources with a simple, hassle-free payment process": "సిగ్నిక్స్‌లో, సమగ్ర సభ్యత్వ ప్రణాళిక ద్వారా అతుల్యమైన విలువను అందించడం మేము లక్ష్యంగా పెట్టుకున్నాము. సులభమైన, ఇబ్బంది లేని చెల్లింపు ప్రక్రియతో మా ఖాతాదారులకు ప్రీమియం వనరులను యాక్సెస్ చేయడం సులభం అవుతుంది.",
+    "Subscription Plan": "సభ్యత్వ ప్రణాళిక",
+    "Cignix offers a single subscription plan that is priced at ₹4999. Once you have made the payment, you will be allowed to access the resources for a lifetime.This single investment unlocks unlimited access to a wealth of resources personalised to meet your needs.": "సిగ్నిక్స్ ₹4999 ధరలో ఒకే ఒక్క సభ్యత్వ ప్రణాళికను అందిస్తుంది. మీరు చెల్లింపును పూర్తి చేసిన తర్వాత, జీవితాంతం వనరులను యాక్సెస్ చేయడానికి మీకు అనుమతి ఉంటుంది. ఈ ఒక్క పెట్టుబడి మీ అవసరాలను తీర్చడానికి అనుకూలీకరించిన అపారమైన వనరులకు పరిమితిలేని యాక్సెస్‌ను ప్రారంభిస్తుంది.",
+    "Payment Methods": "చెల్లింపు పద్ధతులు",
+    "Cignix provides different types of payment options and they are listed below.": "సిగ్నిక్స్ వివిధ రకాల చెల్లింపు ఎంపికలను అందిస్తుంది మరియు అవి క్రింద ఇవ్వబడ్డాయి.",
+    "Credit Card (Visa Card/ Master Card)": "క్రెడిట్ కార్డ్ (వీసా కార్డ్/ మాస్టర్ కార్డ్)",
+    "Make a single payment and enjoy unlimited lifetime access to all resources—no renewals, no extra fees.": "ఒకే ఒక్క చెల్లింపు చేయండి మరియు అన్ని వనరులకు పరిమితిలేని జీవితకాల యాక్సెస్‌ను ఆస్వాదించండి—పునరుద్ధరణ అవసరం లేదు, అదనపు ఫీజులు ఉండవు.",
+    "Gain instant access to all current resources and future updates, keeping you equipped with the latest videos.": "ప్రస్తుతం అందుబాటులో ఉన్న అన్ని వనరులు మరియు భవిష్యత్తు నవీకరణలకు తక్షణ యాక్సెస్ పొందండి, తద్వారా మీరు తాజా వీడియోలతో సిద్ధంగా ఉంటారు.",
+    "Comprehensive Benefits": "సమగ్ర ప్రయోజనాలు",
+    "Simple, One-Time Payment": "సాధారణమైన, ఒక్కసారి చెల్లింపు",
+    "We understand that convenience and security are paramount when it comes to managing your payments. At Cignix, we offer a variety of flexible and secure payment options to ensure a seamless experience for our users.": "మీ చెల్లింపులను నిర్వహించడంలో సౌలభ్యం మరియు భద్రత ముఖ్యం అని మేము అర్థం చేసుకున్నాము. సిగ్నిక్స్‌లో, మా వినియోగదారులకు నిరంతరమైన అనుభవాన్ని అందించడానికి మేము వివిధ రకాల అనుకూలమైన మరియు భద్రమైన చెల్లింపు ఎంపికలను అందిస్తున్నాము.",
+    "Our one-time payment model eliminates recurring fees, offering a cost-effective solution.": "మా ఒక్కసారి చెల్లింపు నమూనా పునరావృత ఫీజులను తొలగిస్తుంది, తద్వారా ఖర్చును తగ్గించే పరిష్కారాన్ని అందిస్తుంది.",
+    "Credit and Debit Cards": "క్రెడిట్ మరియు డెబిట్ కార్డులు",
+    "Pay easily using your preferred credit or debit card. We support": "మీకు ఇష్టమైన క్రెడిట్ లేదా డెబిట్ కార్డ్‌ను ఉపయోగించి సులభంగా చెల్లించండి. మేము మద్దతు ఇస్తాము",
+    "Enjoy fast payments personalized to suit your preferences, with Razorpay.": "రేజర్‌పే ద్వారా మీ అభిరుచులకు అనుగుణంగా కస్టమైజ్ చేయబడిన వేగవంతమైన చెల్లింపులను ఆస్వాదించండి.",
+    "Use your bank's online banking services to pay directly from your account. We support a wide range of banks to ensure compatibility.": "మీ ఖాతా నుండి నేరుగా చెల్లించడానికి మీ బ్యాంక్ యొక్క ఆన్‌లైన్ బ్యాంకింగ్ సేవలను ఉపయోగించండి. అనుకూలతను నిర్ధారించడానికి మేము విస్తృత శ్రేణి బ్యాంకులకు మద్దతు ఇస్తాము.",
+    "Simply use your UPI ID or scan a QR code to complete your transaction instantly. We accept payments from leading UPI providers, such as": "మీ ట్రాన్సాక్షన్‌ను తక్షణం పూర్తి చేయడానికి మీ UPI IDని ఉపయోగించండి లేదా QR కోడ్‌ని స్కాన్ చేయండి. ప్రముఖ UPI ప్రొవైడర్ల నుండి మేము చెల్లింపులను స్వీకరిస్తాము, ఉదాహరణకు",
+    "Cancellation, Return & Refund Policies": "రద్దు, రిటర్న్ మరియు రీఫండ్ విధానాలు",
+    "At Cignix, we offer a refund option, but it is available only if you request a cancellation within 7 to 10 business days of your purchase or order. Please ensure that your request falls within this window to be eligible for a refund. For any issues or inquiries regarding returns or cancellations, feel free to contact our support team for assistance.": "సిగ్నిక్స్‌లో, మేము రీఫండ్ ఎంపికను అందిస్తున్నాము, కానీ ఇది మీ కొనుగోలు లేదా ఆర్డర్ చేసిన 7 నుండి 10 వ్యాపార దినాలలో రద్దు కోసం అభ్యర్థించినట్లయితే మాత్రమే అందుబాటులో ఉంటుంది. రీఫండ్‌కి అర్హత పొందడానికి మీ అభ్యర్థన ఈ సమయం వ్యాసార్థంలో ఉండేలా చూసుకోండి. రిటర్న్లు లేదా రద్దుల గురించి మీకు ఏదైనా సమస్యలు లేదా ప్రశ్నలు ఉంటే, సహాయం కోసం మా సపోర్ట్ టీమ్‌ను సంప్రదించండి.",
+    "How to Subscribe to Cignix": "సిగ్నిక్స్‌కు ఎలా సభ్యత్వం పొందాలి",
+    "Choose Your Plan": "మీ ప్లాన్‌ను ఎంచుకోండి",
+    "Visit the subscription section on our website and select the ₹4,999 Lifetime Plan.": "మా వెబ్‌సైట్‌లోని సభ్యత్వ విభాగాన్ని సందర్శించి ₹4,999 లైఫ్‌టైమ్ ప్లాన్‌ను ఎంచుకోండి.",
+    "Enter Payment Details": "చెల్లింపు వివరాలను నమోదు చేయండి",
+    "Choose your preferred payment method and fill in the required details": "మీకు ఇష్టమైన చెల్లింపు పద్ధతిని ఎంచుకుని అవసరమైన వివరాలను పూరించండి.",
+    "Complete the Payment": "చెల్లింపును పూర్తి చేయండి",
+    "Follow the secure checkout process to finalize your subscription.": "మీ సభ్యత్వాన్ని ఖరారు చేయడానికి సురక్షితమైన చెక్అవుట్ ప్రక్రియను అనుసరించండి.",
+    "Enjoy Lifetime Access": "జీవితకాల యాక్సెస్‌ను ఆస్వాదించండి",
+    "Once the payment is successful, your account will be instantly activated, granting you unlimited access to our videos.": "మీ చెల్లింపు విజయవంతమైన తర్వాత, మీ ఖాతాను తక్షణమే యాక్టివేట్ చేస్తాము మరియు మా వీడియోలకు పరిమితిలేని యాక్సెస్‌ను అందిస్తాము.",
+    "In order to resolve a complaint regarding the Services or to receive further information regarding the use of the Services, please contact us at": "సేవల గురించి మీకు ఏవైనా ఫిర్యాదులు ఉంటే లేదా సేవల వినియోగం గురించి మరింత సమాచారం అవసరమైతే, దయచేసి మమ్మల్ని సంప్రదించండి:",
+    "Cignix is dedicated to providing reliable and efficient technical support to ensure you have a smooth and seamless experience with our services. Our expert team is ready to assist you with any challenges you may face, helping you get back on track quickly and efficiently.": "మా సేవలతో మీరు మృదువుగా మరియు నిరాంతర అనుభవాన్ని పొందేందుకు, Cignix నమ్మదగిన మరియు సమర్థవంతమైన సాంకేతిక మద్దతును అందించడానికి కట్టుబడి ఉంది. మీరు ఎదుర్కొనే ఏవైనా సమస్యలకు సహాయం చేయడానికి మా నిపుణుల బృందం సిద్ధంగా ఉంది, మీకు త్వరగా మరియు సమర్థవంతంగా తిరిగి ప్రారంభించడంలో సహాయం చేస్తుంది.",
+    "Common issues we solve": "మేము పరిష్కరించే సాధారణ సమస్యలు",
+    "Login Issues": "లాగిన్ సమస్యలు",
+    "Struggling to access your account? Whether it’s a forgotten password, account lockout, or a verification problem, our team is here to guide you through the process and ensure you regain access promptly": "మీ ఖాతాను యాక్సెస్ చేయడంలో సమస్యలున్నాయా? మర్చిపోయిన పాస్‌వర్డ్, ఖాతా లాక్‌ అయినా లేదా ధృవీకరణ సమస్య అయినా, మేము మీకు సహాయం చేసి, త్వరగా యాక్సెస్ తిరిగి పొందడంలో మార్గనిర్దేశం చేస్తాము.",
+    "Troubleshooting App Errors": "యాప్ లోపాలను పరిష్కరించడం",
+    "Syncing Devices": "పరికరాలను సింక్ చేయడం",
+    "Need help connecting and syncing devices with our platform? We assist with setup, configuration, and troubleshooting to ensure a seamless multi-device experience.": "మీ పరికరాలను మా ప్లాట్‌ఫారమ్‌తో అనుసంధానం చేసి, సమకాలీకరించడంలో సహాయం అవసరమా? మేము సెటప్, కాన్ఫిగరేషన్ మరియు లోపాల పరిష్కరణలో సహాయం చేస్తాము, తద్వారా మీరు అంతరాయం లేని మల్టీ-డివైస్ అనుభవాన్ని పొందవచ్చు.",
+    "Restoring Lost Progress": "కోలిపోతున్న పురోగతిని పునరుద్ధరించడం",
+    "Lost your progress or data? Don’t worry—our support team helps recover your information, so you can continue from where you left off without losing valuable time or effort.": "మీ పురోగతి లేదా డేటా పోయిందా? ఆందోళన అవసరం లేదు—మా సహాయ బృందం మీ సమాచారాన్ని తిరిగి పొందడంలో సహాయం చేస్తుంది, తద్వారా మీరు వేసిన కృషి లేదా సమయం కోల్పోకుండా మీరు అక్కడి నుండి కొనసాగించవచ్చు.",
+    "Sign-up": "సైన్-అప్",
+    "How does Cignix work": "Cignix ఎలా పనిచేస్తుంది",
+    "Encountering errors or glitches while using our app or platform? We provide step-by-step assistance to diagnose and resolve technical issues, ensuring optimal performance.": "మా యాప్ లేదా ప్లాట్‌ఫారమ్‌ను ఉపయోగిస్తున్నప్పుడు లోపాలు లేదా లోపాలను ఎదుర్కొంటున్నారా? మేము సాంకేతిక సమస్యలను నిర్ధారించడానికి మరియు పరిష్కరించడానికి దశల వారీగా సహాయాన్ని అందిస్తాము, అనువైన పనితీరును నిర్ధారించాము."
   },
   "ContactUs": {
     "We’re committed to offering the best possible support, ensuring your experience with us is smooth!": "మీకు ఉత్తమమైన మద్దతు అందించడానికి మేము కట్టుబడి ఉన్నాము, మీ అనుభవం సాఫీగా ఉండాలని నిర్ధారించుకుంటున్నాము!",
