--- a/src/language/locales/en.json
+++ b/src/language/locales/en.json
@@ -239,7 +239,7 @@
     "Ways to Contact Us": "Ways to Contact Us",
     "Get help with login, app errors, syncing, and restoring progress.": "Get help with login, app errors, syncing, and restoring progress.",
     "Technical Support": "Technical Support",
-    "Want to know about plans and payment methods? Lear more here.": "Want to know about plans and payment methods? Lear more here.",
+    "Want to know about plans and payment methods? Learn more here.": "Want to know about plans and payment methods? Learn more here.",
     "Pricing and Payment": "Pricing and Payment",
     "Find answers to help you quit smoking with Cignix": "Find answers to help you quit smoking with Cignix",
     "Frequently Asked Questions": "Frequently Asked Questions",
@@ -247,7 +247,100 @@
     "Get Started With Cignix": "Get Started With Cignix",
     "We're so glad you're here. Quitting smoking is a journey, and you don’t have to do it alone. Whether you're looking for guidance, helpful tips, or answers to your questions, we’re here to support you every step of the way. Browse the sections below to get the help you need and take your first step toward a healthier, smoke-free life.": "We're so glad you're here. Quitting smoking is a journey, and you don’t have to do it alone. Whether you're looking for guidance, helpful tips, or answers to your questions, we’re here to support you every step of the way. Browse the sections below to get the help you need and take your first step toward a healthier, smoke-free life.",
     "Welcome to the Cignix Help Center!": "Welcome to the Cignix Help Center!",
-    "Help Center": "Help Center"
+    "Help Center": "Help Center",
+    "Embark on your journey to quit smoking with Cignix. With our simple resources and dedicated support, you're never alone on this path.":"Embark on your journey to quit smoking with Cignix. With our simple resources and dedicated support, you're never alone on this path.",
+    "Sign Up":"Sign Up",
+    "Head over to the landing page of Cignix and click on the":"Head over to the landing page of Cignix and click on the",
+    "Sign-in":"Sign-in",
+    "tab.":"tab.",
+    "Then, select the":"Then, select the",
+    "on the next screen.":"on the next screen.",
+    "Now, fill in the required details, including Name, email ID, mobile number, DOB, and gender.":"Now, fill in the required details, including Name, email ID, mobile number, DOB, and gender.",
+    "Enter a secure password for Cignix’s account.":"Enter a secure password for Cignix’s account.",
+    "Click on the":"Click on the",
+    "Get Started":"Get Started",
+    "Now option and you have to take a":"Now option and you have to take a",
+    "SIM test":"SIM test",
+    "Then, you can access the free videos available.":"Then, you can access the free videos available.",
+    "Note":"Note",
+    "In addition, you can also sign up using your Google account.":"In addition, you can also sign up using your Google account.",
+    "Log In":"Log In",
+    "Using Password":"Using Password",
+    "Once registered, click on the":"Once registered, click on the",
+    "tab on the landing page.":"tab on the landing page.",
+    "Next, enter the registered mobile number or email ID.":"Next, enter the registered mobile number or email ID.",
+    "Following that, click on the":"Following that, click on the",
+    "Password":"Password",
+    "bar.":"bar.",
+    "Then, input the appropriate password and click on":"Then, input the appropriate password and click on",
+    "Continue":"Continue",
+    "Using OTP":"Using OTP",
+    "On the landing page, click on the":"On the landing page, click on the",
+    "option.":"option.",
+    "Then, input the registered email ID or mobile number.":"Then, input the registered email ID or mobile number.",
+    "Select the OTP bar and you will receive an":"Select the OTP bar and you will receive an",
+    "via registered email ID or mobile number.":"via registered email ID or mobile number.",
+    "Enter the OTP and you can further access the videos available on Cignix.":"Enter the OTP and you can further access the videos available on Cignix.",
+    "Alternatively, you can sign in using your Google account or OTP.":"Alternatively, you can sign in using your Google account or OTP.",
+    "Customize Your Profile":"Customize Your Profile",
+    "To customize your profile on Cignix, you have to take the SIM test.":"To customize your profile on Cignix, you have to take the SIM test.",
+    "Begin the test to assess your smoking habits and readiness to quit. Simply select a number on the scale that best reflects your agreement, likelihood, or preference.":"Begin the test to assess your smoking habits and readiness to quit. Simply select a number on the scale that best reflects your agreement, likelihood, or preference.",
+    "Your responses will help us provide tailored support for your quit-smoking journey.":"Your responses will help us provide tailored support for your quit-smoking journey.",
+    "Begin Your Program":"Begin Your Program",
+    "Access your personalized dashboard and start your quit-smoking journey with our expert-guided videos.":"Access your personalized dashboard and start your quit-smoking journey with our expert-guided videos.",
+    "What is Cignix":"What is Cignix",
+    "Cignix provides you with step-by-step guidance through expert videos, personalized dashboards, and tracking tools to support you in quitting smoking. The program is designed to your habits and progress, ensuring a customized experience.":"Cignix provides you with step-by-step guidance through expert videos, personalized dashboards, and tracking tools to support you in quitting smoking. The program is designed to your habits and progress, ensuring a customized experience.",
+    "Can I use Cignix on my smartphone":"Can I use Cignix on my smartphone",
+    "Absolutely! Download our app from the App Store or Google Play to access Cignix anytime, anywhere.":"Absolutely! Download our app from the App Store or Google Play to access Cignix anytime, anywhere.",
+    "Do I need to pay to use Cignix":"Do I need to pay to use Cignix",
+    "Yes, you need to pay a one-fee of ₹4999 in order to get lifetime access to the videos.":"Yes, you need to pay a one-fee of ₹4999 in order to get lifetime access to the videos.",
+    "Who can use Cignix":"Who can use Cignix",
+    "Anyone who wants to quit smoking can use Cignix, regardless of how long or how much they’ve been smoking. Individuals above the age of 18 are eligible to use Cignix.":"Anyone who wants to quit smoking can use Cignix, regardless of how long or how much they’ve been smoking. Individuals above the age of 18 are eligible to use Cignix.",
+    "Can I sync my progress across devices":"Can I sync my progress across devices",
+    "Yes, your progress is stored in your account and can be accessed across multiple devices by logging in.":"Yes, your progress is stored in your account and can be accessed across multiple devices by logging in.",
+    "Is my personal data safe with Cignix":"Is my personal data safe with Cignix",
+    "Absolutely. Cignix values your privacy and ensures that all your data is encrypted and securely stored.":"Absolutely. Cignix values your privacy and ensures that all your data is encrypted and securely stored.",
+    "At Cignix, we aim to provide unmatched value through our comprehensive subscription plan, making it easy for our customers to access premium resources with a simple, hassle-free payment process":"At Cignix, we aim to provide unmatched value through our comprehensive subscription plan, making it easy for our customers to access premium resources with a simple, hassle-free payment process",
+    "Subscription Plan":"Subscription Plan",
+    "Cignix offers a single subscription plan that is priced at ₹4999. Once you have made the payment, you will be allowed to access the resources for a lifetime.This single investment unlocks unlimited access to a wealth of resources personalised to meet your needs.":"Cignix offers a single subscription plan that is priced at ₹4999. Once you have made the payment, you will be allowed to access the resources for a lifetime.This single investment unlocks unlimited access to a wealth of resources personalised to meet your needs.",
+    "Payment Methods":"Payment Methods",
+    "Cignix provides different types of payment options and they are listed below.":"Cignix provides different types of payment options and they are listed below.",
+    "Credit Card (Visa Card/ Master Card)":"Credit Card (Visa Card/ Master Card)",
+    "Make a single payment and enjoy unlimited lifetime access to all resources—no renewals, no extra fees.":"Make a single payment and enjoy unlimited lifetime access to all resources—no renewals, no extra fees.",
+    "Gain instant access to all current resources and future updates, keeping you equipped with the latest videos.":"Gain instant access to all current resources and future updates, keeping you equipped with the latest videos.",
+    "Comprehensive Benefits":"Comprehensive Benefits",
+    "Simple, One-Time Payment":"Simple, One-Time Payment",
+    "We understand that convenience and security are paramount when it comes to managing your payments. At Cignix, we offer a variety of flexible and secure payment options to ensure a seamless experience for our users.":"We understand that convenience and security are paramount when it comes to managing your payments. At Cignix, we offer a variety of flexible and secure payment options to ensure a seamless experience for our users.",
+    "Our one-time payment model eliminates recurring fees, offering a cost-effective solution.":"Our one-time payment model eliminates recurring fees, offering a cost-effective solution.",
+    "Credit and Debit Cards":"Credit and Debit Cards",
+    "Pay easily using your preferred credit or debit card. We support":"Pay easily using your preferred credit or debit card. We support",
+    "Enjoy fast payments personalized to suit your preferences, with Razorpay.":"Enjoy fast payments personalized to suit your preferences, with Razorpay.",
+    "Use your bank's online banking services to pay directly from your account. We support a wide range of banks to ensure compatibility.":"Use your bank's online banking services to pay directly from your account. We support a wide range of banks to ensure compatibility.",
+    "Simply use your UPI ID or scan a QR code to complete your transaction instantly. We accept payments from leading UPI providers, such as":"Simply use your UPI ID or scan a QR code to complete your transaction instantly. We accept payments from leading UPI providers, such as",
+    "Cancellation, Return & Refund Policies":"Cancellation, Return & Refund Policies",
+    "At Cignix, we offer a refund option, but it is available only if you request a cancellation within 7 to 10 business days of your purchase or order. Please ensure that your request falls within this window to be eligible for a refund. For any issues or inquiries regarding returns or cancellations, feel free to contact our support team for assistance.":"At Cignix, we offer a refund option, but it is available only if you request a cancellation within 7 to 10 business days of your purchase or order. Please ensure that your request falls within this window to be eligible for a refund. For any issues or inquiries regarding returns or cancellations, feel free to contact our support team for assistance.",
+    "How to Subscribe to Cignix":"How to Subscribe to Cignix",
+    "Choose Your Plan":"Choose Your Plan",
+    "Visit the subscription section on our website and select the ₹4,999 Lifetime Plan.":"Visit the subscription section on our website and select the ₹4,999 Lifetime Plan.",
+    "Enter Payment Details":"Enter Payment Details",
+    "Choose your preferred payment method and fill in the required details":"Choose your preferred payment method and fill in the required details",
+    "Complete the Payment":"Complete the Payment",
+    "Follow the secure checkout process to finalize your subscription.":"Follow the secure checkout process to finalize your subscription.",
+    "Enjoy Lifetime Access":"Enjoy Lifetime Access",
+    "Once the payment is successful, your account will be instantly activated, granting you unlimited access to our videos.":"Once the payment is successful, your account will be instantly activated, granting you unlimited access to our videos.",
+    "In order to resolve a complaint regarding the Services or to receive further information regarding the use of the Services, please contact us at":"In order to resolve a complaint regarding the Services or to receive further information regarding the use of the Services, please contact us at",
+    "Cignix is dedicated to providing reliable and efficient technical support to ensure you have a smooth and seamless experience with our services. Our expert team is ready to assist you with any challenges you may face, helping you get back on track quickly and efficiently.":"Cignix is dedicated to providing reliable and efficient technical support to ensure you have a smooth and seamless experience with our services. Our expert team is ready to assist you with any challenges you may face, helping you get back on track quickly and efficiently.",
+    "Common issues we solve":"Common issues we solve",
+    "Login Issues":"Login Issues",
+    "Struggling to access your account? Whether it’s a forgotten password, account lockout, or a verification problem, our team is here to guide you through the process and ensure you regain access promptly":"Struggling to access your account? Whether it’s a forgotten password, account lockout, or a verification problem, our team is here to guide you through the process and ensure you regain access promptly",
+    "Troubleshooting App Errors":"Troubleshooting App Errors",
+    "Syncing Devices":"Syncing Devices",
+    "Need help connecting and syncing devices with our platform? We assist with setup, configuration, and troubleshooting to ensure a seamless multi-device experience.":"Need help connecting and syncing devices with our platform? We assist with setup, configuration, and troubleshooting to ensure a seamless multi-device experience.",
+    "Restoring Lost Progress":"Restoring Lost Progress",
+    "Lost your progress or data? Don’t worry—our support team helps recover your information, so you can continue from where you left off without losing valuable time or effort.":"Lost your progress or data? Don’t worry—our support team helps recover your information, so you can continue from where you left off without losing valuable time or effort.",
+    "Sign-up":"Sign-up",
+    "How does Cignix work":"How does Cignix work",
+    "Encountering errors or glitches while using our app or platform? We provide step-by-step assistance to diagnose and resolve technical issues, ensuring optimal performance.":"Encountering errors or glitches while using our app or platform? We provide step-by-step assistance to diagnose and resolve technical issues, ensuring optimal performance."
   },
   "ContactUs": {
     "We’re committed to offering the best possible support, ensuring your experience with us is smooth!": "We’re committed to offering the best possible support, ensuring your experience with us is smooth!",
